operation riptide skins

--- a/addons/sourcemod/configs/weapons/weapons_french.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_french.cfg
@@ -1,5 +1,335 @@
 "Skins"
 {
+	"Lion de garde"
+	{
+		"index"		"1103"
+		"classes"	"weapon_xm1014;"
+	}
+	"Lotus noir"
+	{
+		"index"		"1102"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Mode turbo"
+	{
+		"index"		"1101"
+		"classes"	"weapon_ssg08;"
+	}
+	"Attaque gloutonne"
+	{
+		"index"		"1100"
+		"classes"	"weapon_glock;"
+	}
+	"Lumen"
+	{
+		"index"		"1099"
+		"classes"	"weapon_bizon;"
+	}
+	"Boite à jouets"
+	{
+		"index"		"1098"
+		"classes"	"weapon_mac10;"
+	}
+	"Lycoris"
+	{
+		"index"		"1097"
+		"classes"	"weapon_m4a1;"
+	}
+	"Guérilla"
+	{
+		"index"		"1096"
+		"classes"	"weapon_mp7;"
+	}
+	"Keeping Tabs"
+	{
+		"index"		"1095"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Mont Fuji"
+	{
+		"index"		"1094"
+		"classes"	"weapon_mp9;"
+	}
+	"Protocole d'impulsion"
+	{
+		"index"		"1093"
+		"classes"	"weapon_fiveseven;"
+	}
+	"ZX Spectron"
+	{
+		"index"		"1092"
+		"classes"	"weapon_famas;"
+	}
+	"Tread"
+	{
+		"index"		"1091"
+		"classes"	"weapon_elite;"
+	}
+	"Ocean Drive"
+	{
+		"index"		"1090"
+		"classes"	"weapon_deagle;"
+	}
+	"Spectre Bi83"
+	{
+		"index"		"1089"
+		"classes"	"weapon_mag7;"
+	}
+	"Fléau"
+	{
+		"index"		"1088"
+		"classes"	"weapon_aug;"
+	}
+	"Leet Museo"
+	{
+		"index"		"1087"
+		"classes"	"weapon_ak47;"
+	}
+	"Autotronic"
+	{
+		"index"		"1118"
+		"classes"	"weapon_knife_push;"
+	}
+	"Autotronic"
+	{
+		"index"		"1117"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"Autotronic"
+	{
+		"index"		"1116"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"Autotronic"
+	{
+		"index"		"1115"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"Autotronic"
+	{
+		"index"		"1114"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"Noir stratifié"
+	{
+		"index"		"1113"
+		"classes"	"weapon_knife_push;"
+	}
+	"Noir stratifié"
+	{
+		"index"		"1112"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"Noir stratifié"
+	{
+		"index"		"1111"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"Noir stratifié"
+	{
+		"index"		"1110"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"Noir stratifié"
+	{
+		"index"		"1109"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"Tradition"
+	{
+		"index"		"1108"
+		"classes"	"weapon_knife_push;"
+	}
+	"Tradition"
+	{
+		"index"		"1107"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"Tradition"
+	{
+		"index"		"1106"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"Tradition"
+	{
+		"index"		"1105"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"Tradition"
+	{
+		"index"		"1104"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"Câblage défectueux"
+	{
+		"index"		"1066"
+		"classes"	"weapon_famas;"
+	}
+	"Vidange"
+	{
+		"index"		"1086"
+		"classes"	"weapon_elite;"
+	}
+	"Mécanisme"
+	{
+		"index"		"1085"
+		"classes"	"weapon_ump45;"
+	}
+	"Prime de risque"
+	{
+		"index"		"1084"
+		"classes"	"weapon_sg556;"
+	}
+	"Disjoncteur"
+	{
+		"index"		"1083"
+		"classes"	"weapon_bizon;"
+	}
+	"Risque de chute"
+	{
+		"index"		"1082"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Digital Architect"
+	{
+		"index"		"1081"
+		"classes"	"weapon_p250;"
+	}
+	"Infrastructure"
+	{
+		"index"		"1080"
+		"classes"	"weapon_negev;"
+	}
+	"Red Tire"
+	{
+		"index"		"1079"
+		"classes"	"weapon_glock;"
+	}
+	"Blue Tire"
+	{
+		"index"		"1078"
+		"classes"	"weapon_xm1014;"
+	}
+	"Interlock"
+	{
+		"index"		"1077"
+		"classes"	"weapon_nova;"
+	}
+	"Cadre"
+	{
+		"index"		"1076"
+		"classes"	"weapon_cz75a;"
+	}
+	"Strats"
+	{
+		"index"		"1075"
+		"classes"	"weapon_mac10;"
+	}
+	"Schematic"
+	{
+		"index"		"1074"
+		"classes"	"weapon_p90;"
+	}
+	"Danger imminent"
+	{
+		"index"		"1073"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Prism Terrace"
+	{
+		"index"		"1072"
+		"classes"	"weapon_mag7;"
+	}
+	"ATTENTION !"
+	{
+		"index"		"1071"
+		"classes"	"weapon_galilar;"
+	}
+	"Green Laminate"
+	{
+		"index"		"1070"
+		"classes"	"weapon_ak47;"
+	}
+	"Doppler Gamma (Phase 4)"
+	{
+		"index"		"1123"
+		"classes"	"weapon_glock;"
+	}
+	"Doppler Gamma (Phase 3)"
+	{
+		"index"		"1122"
+		"classes"	"weapon_glock;"
+	}
+	"Doppler Gamma (Phase 2)"
+	{
+		"index"		"1121"
+		"classes"	"weapon_glock;"
+	}
+	"Doppler Gamma (Phase 1)"
+	{
+		"index"		"1120"
+		"classes"	"weapon_glock;"
+	}
+	"Doppler Gamma (Emerald)"
+	{
+		"index"		"1119"
+		"classes"	"weapon_glock;"
+	}
+	"Propagande"
+	{
+		"index"		"1067"
+		"classes"	"weapon_mac10;"
+	}
+	"Blanco"
+	{
+		"index"		"1065"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Syndicat"
+	{
+		"index"		"1064"
+		"classes"	"weapon_cz75a;"
+	}
+	"La Coalition"
+	{
+		"index"		"1063"
+		"classes"	"weapon_m4a1;"
+	}
+	"Autumn Twilly"
+	{
+		"index"		"1061"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Spring Twilly"
+	{
+		"index"		"1060"
+		"classes"	"weapon_ssg08;"
+	}
+	"Pétillant"
+	{
+		"index"		"1059"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"POP AWP"
+	{
+		"index"		"1058"
+		"classes"	"weapon_awp;"
+	}
+	"Spoutnik"
+	{
+		"index"		"1056"
+		"classes"	"weapon_deagle;"
+	}
+	"Course à l'espace"
+	{
+		"index"		"1055"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Fusion"
+	{
+		"index"		"1053"
+		"classes"	"weapon_famas;"
+	}
 	"Windblown"
 	{
 		"index"		"1051"
@@ -30,7 +360,7 @@
 		"index"		"1046"
 		"classes"	"weapon_xm1014;"
 	}
-	"Button Masher"
+	"Presse-bouton"
 	{
 		"index"		"1045"
 		"classes"	"weapon_mac10;"
@@ -40,7 +370,7 @@
 		"index"		"1044"
 		"classes"	"weapon_p250;"
 	}
-	"dev_texture"
+	"texture_dév"
 	{
 		"index"		"1043"
 		"classes"	"weapon_negev;"
@@ -50,7 +380,7 @@
 		"index"		"1042"
 		"classes"	"weapon_m249;"
 	}
-	"In Living Color"
+	"Psychédélique"
 	{
 		"index"		"1041"
 		"classes"	"weapon_m4a1;"
@@ -554,6 +884,166 @@
 	{
 		"index"		"941"
 		"classes"	"weapon_ak47;"
+	}
+	"Oxide Oasis"
+	{
+		"index"		"923"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Desert Blossom"
+	{
+		"index"		"765"
+		"classes"	"weapon_sg556;"
+	}
+	"Fennec"
+	{
+		"index"		"764"
+		"classes"	"weapon_deagle;"
+	}
+	"Anolis"
+	{
+		"index"		"829"
+		"classes"	"weapon_bizon;"
+	}
+	"Luxuriance"
+	{
+		"index"		"828"
+		"classes"	"weapon_p90;"
+	}
+	"Humidor"
+	{
+		"index"		"827"
+		"classes"	"weapon_m249;"
+	}
+	"Damas terre de Sienne"
+	{
+		"index"		"826"
+		"classes"	"weapon_mac10;"
+	}
+	"Sècheresse"
+	{
+		"index"		"825"
+		"classes"	"weapon_p250;"
+	}
+	"Drift Wood"
+	{
+		"index"		"824"
+		"classes"	"weapon_elite;"
+	}
+	"Tempête de sable"
+	{
+		"index"		"823"
+		"classes"	"weapon_aug;"
+	}
+	"Éclat marin"
+	{
+		"index"		"822"
+		"classes"	"weapon_mag7;"
+	}
+	"Vignes élégantes"
+	{
+		"index"		"821"
+		"classes"	"weapon_xm1014;"
+	}
+	"Boite à musique"
+	{
+		"index"		"820"
+		"classes"	"weapon_mp9;"
+	}
+	"Hydra du désert"
+	{
+		"index"		"819"
+		"classes"	"weapon_awp;"
+	}
+	"Pourpre numérique"
+	{
+		"index"		"818"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Death Strike"
+	{
+		"index"		"1052"
+		"classes"	"weapon_ssg08;"
+	}
+	"Proie"
+	{
+		"index"		"935"
+		"classes"	"weapon_mp7;weapon_ssg08;"
+	}
+	"Bleached"
+	{
+		"index"		"934"
+		"classes"	"weapon_sg556;"
+	}
+	"Palmier de minuit"
+	{
+		"index"		"933"
+		"classes"	"weapon_m249;weapon_cz75a;"
+	}
+	"Vigne flétrie"
+	{
+		"index"		"932"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Vieilles racines"
+	{
+		"index"		"931"
+		"classes"	"weapon_mp9;"
+	}
+	"Nouvelles racines"
+	{
+		"index"		"930"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Sables mouvants"
+	{
+		"index"		"929"
+		"classes"	"weapon_nova;"
+	}
+	"Black & Tan"
+	{
+		"index"		"928"
+		"classes"	"weapon_p250;"
+	}
+	"Bois échauffé"
+	{
+		"index"		"927"
+		"classes"	"weapon_aug;"
+	}
+	"Rouge numérique"
+	{
+		"index"		"926"
+		"classes"	"weapon_m4a1;"
+	}
+	"Désert numérique"
+	{
+		"index"		"925"
+		"classes"	"weapon_p90;"
+	}
+	"Teinte désertique"
+	{
+		"index"		"924"
+		"classes"	"weapon_revolver;"
+	}
+	"Anolis orange"
+	{
+		"index"		"922"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Arabesque dorée"
+	{
+		"index"		"921"
+		"classes"	"weapon_ak47;"
+	}
+	"Parched"
+	{
+		"index"		"880"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Dégradé"
+	{
+		"index"		"879"
+		"classes"	"weapon_ump45;"
 	}
 	"Commémoration"
 	{
@@ -1245,7 +1735,7 @@
 		"index"		"708"
 		"classes"	"weapon_aug;"
 	}
-	"Coureur lumineux"
+	"Pilote néon"
 	{
 		"index"		"707"
 		"classes"	"weapon_ak47;"
@@ -1858,7 +2348,7 @@
 	"Signature"
 	{
 		"index"		"581"
-		"classes"	"weapon_knife_m9_bayonet;"
+		"classes"	"weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Signature"
 	{
@@ -1868,7 +2358,7 @@
 	"Eau vive"
 	{
 		"index"		"579"
-		"classes"	"weapon_knife_m9_bayonet;"
+		"classes"	"weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Eau vive"
 	{
@@ -1903,27 +2393,27 @@
 	"Doppler Gamma (Phase 4)"
 	{
 		"index"		"572"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Doppler Gamma (Phase 3)"
 	{
 		"index"		"571"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Doppler Gamma (Phase 2)"
 	{
 		"index"		"570"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Doppler Gamma (Phase 1)"
 	{
 		"index"		"569"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Doppler Gamma (Emerald)"
 	{
 		"index"		"568"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Noir stratifié"
 	{
@@ -2088,7 +2578,7 @@
 	"Filet de protection"
 	{
 		"index"		"795"
-		"classes"	"weapon_ak47;"
+		"classes"	"weapon_ak47;weapon_tec9;"
 	}
 	"Balayeur"
 	{
@@ -2780,7 +3270,7 @@
 		"index"		"434"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Coureur lumineux"
+	"Pilote néon"
 	{
 		"index"		"433"
 		"classes"	"weapon_mac10;"
@@ -2970,7 +3460,7 @@
 		"index"		"394"
 		"classes"	"weapon_ak47;"
 	}
-	"Sérénité"
+	"Tranquillité"
 	{
 		"index"		"393"
 		"classes"	"weapon_xm1014;"
@@ -3673,7 +4163,7 @@
 	"Arrêt complet"
 	{
 		"index"		"250"
-		"classes"	"weapon_sawedoff;weapon_mp7;"
+		"classes"	"weapon_ump45;weapon_sawedoff;weapon_mp7;"
 	}
 	"Quartz cobalt"
 	{
@@ -3683,7 +4173,7 @@
 	"Quartz rouge"
 	{
 		"index"		"248"
-		"classes"	"weapon_tec9;"
+		"classes"	"weapon_tec9;weapon_nova;"
 	}
 	"Acier de Damas"
 	{
@@ -3693,7 +4183,7 @@
 	"Dégradé ambré"
 	{
 		"index"		"246"
-		"classes"	"weapon_mac10;weapon_sawedoff;weapon_hkp2000;"
+		"classes"	"weapon_aug;weapon_galilar;weapon_mac10;weapon_sawedoff;weapon_hkp2000;"
 	}
 	"Reconnaissance militaire"
 	{
@@ -3723,7 +4213,7 @@
 	"CaliCamo"
 	{
 		"index"		"240"
-		"classes"	"weapon_xm1014;weapon_negev;"
+		"classes"	"weapon_famas;weapon_xm1014;weapon_negev;"
 	}
 	"VariCamo bleu"
 	{
@@ -4268,7 +4758,7 @@
 	"Rose numérique"
 	{
 		"index"		"84"
-		"classes"	"weapon_awp;"
+		"classes"	"weapon_glock;weapon_awp;"
 	}
 	"Orange numérique"
 	{
@@ -4318,7 +4808,7 @@
 	"Fibre de carbone"
 	{
 		"index"		"70"
-		"classes"	"weapon_ump45;weapon_bizon;weapon_mag7;weapon_scar20;"
+		"classes"	"weapon_ump45;weapon_bizon;weapon_mag7;weapon_scar20;weapon_ssg08;"
 	}
 	"Sang froid"
 	{
@@ -4368,7 +4858,7 @@
 	"Cémenté"
 	{
 		"index"		"44"
-		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
+		"classes"	"weapon_fiveseven;weapon_ak47;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Tacheté"
 	{
@@ -4403,7 +4893,7 @@
 	"Flamme"
 	{
 		"index"		"37"
-		"classes"	"weapon_deagle;weapon_ump45;"
+		"classes"	"weapon_deagle;weapon_ump45;weapon_revolver;"
 	}
 	"Sclérosé"
 	{
