--- a/addons/sourcemod/configs/weapons/weapons_schinese.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_schinese.cfg
@@ -1,5 +1,335 @@
 "Skins"
 {
+	"狻猊"
+	{
+		"index"		"1103"
+		"classes"	"weapon_xm1014;"
+	}
+	"黑莲花"
+	{
+		"index"		"1102"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"速度激情"
+	{
+		"index"		"1101"
+		"classes"	"weapon_ssg08;"
+	}
+	"零食派对"
+	{
+		"index"		"1100"
+		"classes"	"weapon_glock;"
+	}
+	"战术手电"
+	{
+		"index"		"1099"
+		"classes"	"weapon_bizon;"
+	}
+	"玩具盒子"
+	{
+		"index"		"1098"
+		"classes"	"weapon_mac10;"
+	}
+	"彼岸花"
+	{
+		"index"		"1097"
+		"classes"	"weapon_m4a1;"
+	}
+	"游击队"
+	{
+		"index"		"1096"
+		"classes"	"weapon_mp7;"
+	}
+	"特训地图"
+	{
+		"index"		"1095"
+		"classes"	"weapon_g3sg1;"
+	}
+	"富士山"
+	{
+		"index"		"1094"
+		"classes"	"weapon_mp9;"
+	}
+	"同步力场"
+	{
+		"index"		"1093"
+		"classes"	"weapon_fiveseven;"
+	}
+	"ZX81彩色"
+	{
+		"index"		"1092"
+		"classes"	"weapon_famas;"
+	}
+	"胶面花纹"
+	{
+		"index"		"1091"
+		"classes"	"weapon_elite;"
+	}
+	"纵横波涛"
+	{
+		"index"		"1090"
+		"classes"	"weapon_deagle;"
+	}
+	"铋晶体"
+	{
+		"index"		"1089"
+		"classes"	"weapon_mag7;"
+	}
+	"瘟疫"
+	{
+		"index"		"1088"
+		"classes"	"weapon_aug;"
+	}
+	"抽象派1337"
+	{
+		"index"		"1087"
+		"classes"	"weapon_ak47;"
+	}
+	"自动化"
+	{
+		"index"		"1118"
+		"classes"	"weapon_knife_push;"
+	}
+	"自动化"
+	{
+		"index"		"1117"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"自动化"
+	{
+		"index"		"1116"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"自动化"
+	{
+		"index"		"1115"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"自动化"
+	{
+		"index"		"1114"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"黑色层压板"
+	{
+		"index"		"1113"
+		"classes"	"weapon_knife_push;"
+	}
+	"黑色层压板"
+	{
+		"index"		"1112"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"黑色层压板"
+	{
+		"index"		"1111"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"黑色层压板"
+	{
+		"index"		"1110"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"黑色层压板"
+	{
+		"index"		"1109"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"传说"
+	{
+		"index"		"1108"
+		"classes"	"weapon_knife_push;"
+	}
+	"传说"
+	{
+		"index"		"1107"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"传说"
+	{
+		"index"		"1106"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"传说"
+	{
+		"index"		"1105"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"传说"
+	{
+		"index"		"1104"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"线路故障"
+	{
+		"index"		"1066"
+		"classes"	"weapon_famas;"
+	}
+	"更换机油"
+	{
+		"index"		"1086"
+		"classes"	"weapon_elite;"
+	}
+	"机械装置"
+	{
+		"index"		"1085"
+		"classes"	"weapon_ump45;"
+	}
+	"玩命职场"
+	{
+		"index"		"1084"
+		"classes"	"weapon_sg556;"
+	}
+	"开关箱"
+	{
+		"index"		"1083"
+		"classes"	"weapon_bizon;"
+	}
+	"坠落危险"
+	{
+		"index"		"1082"
+		"classes"	"weapon_fiveseven;"
+	}
+	"数字架构师"
+	{
+		"index"		"1081"
+		"classes"	"weapon_p250;"
+	}
+	"基础建设"
+	{
+		"index"		"1080"
+		"classes"	"weapon_negev;"
+	}
+	"Track Tires"
+	{
+		"index"		"1079"
+		"classes"	"weapon_glock;"
+	}
+	"胎面花纹"
+	{
+		"index"		"1078"
+		"classes"	"weapon_xm1014;"
+	}
+	"至幻时刻"
+	{
+		"index"		"1077"
+		"classes"	"weapon_nova;"
+	}
+	"幻光构架"
+	{
+		"index"		"1076"
+		"classes"	"weapon_cz75a;"
+	}
+	"策略"
+	{
+		"index"		"1075"
+		"classes"	"weapon_mac10;"
+	}
+	"解视图"
+	{
+		"index"		"1074"
+		"classes"	"weapon_p90;"
+	}
+	"紧迫危机"
+	{
+		"index"		"1073"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"棱彩阶梯"
+	{
+		"index"		"1072"
+		"classes"	"weapon_mag7;"
+	}
+	"警告！"
+	{
+		"index"		"1071"
+		"classes"	"weapon_galilar;"
+	}
+	"绿色层压板"
+	{
+		"index"		"1070"
+		"classes"	"weapon_ak47;"
+	}
+	"伽玛多普勒 (Phase 4)"
+	{
+		"index"		"1123"
+		"classes"	"weapon_glock;"
+	}
+	"伽玛多普勒 (Phase 3)"
+	{
+		"index"		"1122"
+		"classes"	"weapon_glock;"
+	}
+	"伽玛多普勒 (Phase 2)"
+	{
+		"index"		"1121"
+		"classes"	"weapon_glock;"
+	}
+	"伽玛多普勒 (Phase 1)"
+	{
+		"index"		"1120"
+		"classes"	"weapon_glock;"
+	}
+	"伽玛多普勒 (Emerald)"
+	{
+		"index"		"1119"
+		"classes"	"weapon_glock;"
+	}
+	"凝视之眼"
+	{
+		"index"		"1067"
+		"classes"	"weapon_mac10;"
+	}
+	"银装素裹"
+	{
+		"index"		"1065"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"辛迪加"
+	{
+		"index"		"1064"
+		"classes"	"weapon_cz75a;"
+	}
+	"合纵"
+	{
+		"index"		"1063"
+		"classes"	"weapon_m4a1;"
+	}
+	"秋季方巾"
+	{
+		"index"		"1061"
+		"classes"	"weapon_mp5sd;"
+	}
+	"春季方巾"
+	{
+		"index"		"1060"
+		"classes"	"weapon_ssg08;"
+	}
+	"Fizzy POP"
+	{
+		"index"		"1059"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"POP AWP"
+	{
+		"index"		"1058"
+		"classes"	"weapon_awp;"
+	}
+	"人造卫星"
+	{
+		"index"		"1056"
+		"classes"	"weapon_deagle;"
+	}
+	"太空竞赛"
+	{
+		"index"		"1055"
+		"classes"	"weapon_hkp2000;"
+	}
+	"熔化"
+	{
+		"index"		"1053"
+		"classes"	"weapon_famas;"
+	}
 	"随风"
 	{
 		"index"		"1051"
@@ -554,6 +884,166 @@
 	{
 		"index"		"941"
 		"classes"	"weapon_ak47;"
+	}
+	"幻化绿洲"
+	{
+		"index"		"923"
+		"classes"	"weapon_mp5sd;"
+	}
+	"沙漠之花"
+	{
+		"index"		"765"
+		"classes"	"weapon_sg556;"
+	}
+	"沙漠之狐"
+	{
+		"index"		"764"
+		"classes"	"weapon_deagle;"
+	}
+	"安乐蜥"
+	{
+		"index"		"829"
+		"classes"	"weapon_bizon;"
+	}
+	"碧绿升藤"
+	{
+		"index"		"828"
+		"classes"	"weapon_p90;"
+	}
+	"雪茄盒"
+	{
+		"index"		"827"
+		"classes"	"weapon_m249;"
+	}
+	"赭色大马士革"
+	{
+		"index"		"826"
+		"classes"	"weapon_mac10;"
+	}
+	"天旱"
+	{
+		"index"		"825"
+		"classes"	"weapon_p250;"
+	}
+	"浮木"
+	{
+		"index"		"824"
+		"classes"	"weapon_elite;"
+	}
+	"夜空沙暴"
+	{
+		"index"		"823"
+		"classes"	"weapon_aug;"
+	}
+	"海军之辉"
+	{
+		"index"		"822"
+		"classes"	"weapon_mag7;"
+	}
+	"雅藤如嫣"
+	{
+		"index"		"821"
+		"classes"	"weapon_xm1014;"
+	}
+	"八音盒"
+	{
+		"index"		"820"
+		"classes"	"weapon_mp9;"
+	}
+	"沙漠九头蛇"
+	{
+		"index"		"819"
+		"classes"	"weapon_awp;"
+	}
+	"紫色DDPAT"
+	{
+		"index"		"818"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"致命一击"
+	{
+		"index"		"1052"
+		"classes"	"weapon_ssg08;"
+	}
+	"掠夺者"
+	{
+		"index"		"935"
+		"classes"	"weapon_mp7;weapon_ssg08;"
+	}
+	"白骨"
+	{
+		"index"		"934"
+		"classes"	"weapon_sg556;"
+	}
+	"夜半棕榈"
+	{
+		"index"		"933"
+		"classes"	"weapon_m249;weapon_cz75a;"
+	}
+	"枯藤老树"
+	{
+		"index"		"932"
+		"classes"	"weapon_fiveseven;"
+	}
+	"残花败藤"
+	{
+		"index"		"931"
+		"classes"	"weapon_mp9;"
+	}
+	"碧藤青翠"
+	{
+		"index"		"930"
+		"classes"	"weapon_g3sg1;"
+	}
+	"流沙"
+	{
+		"index"		"929"
+		"classes"	"weapon_nova;"
+	}
+	"潜藏者"
+	{
+		"index"		"928"
+		"classes"	"weapon_p250;"
+	}
+	"朽木"
+	{
+		"index"		"927"
+		"classes"	"weapon_aug;"
+	}
+	"红色DDPAT"
+	{
+		"index"		"926"
+		"classes"	"weapon_m4a1;"
+	}
+	"沙漠DDPAT"
+	{
+		"index"		"925"
+		"classes"	"weapon_p90;"
+	}
+	"沙漠伪装"
+	{
+		"index"		"924"
+		"classes"	"weapon_revolver;"
+	}
+	"橙红安乐蜥"
+	{
+		"index"		"922"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"金色藤蔓"
+	{
+		"index"		"921"
+		"classes"	"weapon_ak47;"
+	}
+	"旱地之花"
+	{
+		"index"		"880"
+		"classes"	"weapon_sawedoff;"
+	}
+	"渐变之色"
+	{
+		"index"		"879"
+		"classes"	"weapon_ump45;"
 	}
 	"纪念碑"
 	{
@@ -1858,7 +2348,7 @@
 	"自由之手"
 	{
 		"index"		"581"
-		"classes"	"weapon_knife_m9_bayonet;"
+		"classes"	"weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"自由之手"
 	{
@@ -1868,7 +2358,7 @@
 	"澄澈之水"
 	{
 		"index"		"579"
-		"classes"	"weapon_knife_m9_bayonet;"
+		"classes"	"weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"澄澈之水"
 	{
@@ -1903,27 +2393,27 @@
 	"伽玛多普勒 (Phase 4)"
 	{
 		"index"		"572"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"伽玛多普勒 (Phase 3)"
 	{
 		"index"		"571"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"伽玛多普勒 (Phase 2)"
 	{
 		"index"		"570"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"伽玛多普勒 (Phase 1)"
 	{
 		"index"		"569"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"伽玛多普勒 (Emerald)"
 	{
 		"index"		"568"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"黑色层压板"
 	{
@@ -2088,7 +2578,7 @@
 	"安全网"
 	{
 		"index"		"795"
-		"classes"	"weapon_ak47;"
+		"classes"	"weapon_ak47;weapon_tec9;"
 	}
 	"扫频仪"
 	{
@@ -3673,7 +4163,7 @@
 	"逮捕者"
 	{
 		"index"		"250"
-		"classes"	"weapon_sawedoff;weapon_mp7;"
+		"classes"	"weapon_ump45;weapon_sawedoff;weapon_mp7;"
 	}
 	"钴蓝石英"
 	{
@@ -3683,7 +4173,7 @@
 	"晶红石英"
 	{
 		"index"		"248"
-		"classes"	"weapon_tec9;"
+		"classes"	"weapon_tec9;weapon_nova;"
 	}
 	"大马士革钢"
 	{
@@ -3693,7 +4183,7 @@
 	"渐变琥珀"
 	{
 		"index"		"246"
-		"classes"	"weapon_mac10;weapon_sawedoff;weapon_hkp2000;"
+		"classes"	"weapon_aug;weapon_galilar;weapon_mac10;weapon_sawedoff;weapon_hkp2000;"
 	}
 	"陆军斥候"
 	{
@@ -3723,7 +4213,7 @@
 	"加州迷彩"
 	{
 		"index"		"240"
-		"classes"	"weapon_xm1014;weapon_negev;"
+		"classes"	"weapon_famas;weapon_xm1014;weapon_negev;"
 	}
 	"蔚蓝多变迷彩"
 	{
@@ -4268,7 +4758,7 @@
 	"粉红 DDPAT"
 	{
 		"index"		"84"
-		"classes"	"weapon_awp;"
+		"classes"	"weapon_glock;weapon_awp;"
 	}
 	"橙黄 DDPAT"
 	{
@@ -4318,7 +4808,7 @@
 	"碳素纤维"
 	{
 		"index"		"70"
-		"classes"	"weapon_ump45;weapon_bizon;weapon_mag7;weapon_scar20;"
+		"classes"	"weapon_ump45;weapon_bizon;weapon_mag7;weapon_scar20;weapon_ssg08;"
 	}
 	"冷血杀手"
 	{
@@ -4368,7 +4858,7 @@
 	"表面淬火"
 	{
 		"index"		"44"
-		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
+		"classes"	"weapon_fiveseven;weapon_ak47;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"人工染色"
 	{
@@ -4403,7 +4893,7 @@
 	"炽烈之炎"
 	{
 		"index"		"37"
-		"classes"	"weapon_deagle;weapon_ump45;"
+		"classes"	"weapon_deagle;weapon_ump45;weapon_revolver;"
 	}
 	"骨化之色"
 	{
