--- a/addons/sourcemod/configs/weapons/weapons_turkish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_turkish.cfg
@@ -1,5 +1,335 @@
 "Skins"
 {
+	"Bekçi Köpeği"
+	{
+		"index"		"1103"
+		"classes"	"weapon_xm1014;"
+	}
+	"Siyah Lotus"
+	{
+		"index"		"1102"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Turbo Peek"
+	{
+		"index"		"1101"
+		"classes"	"weapon_ssg08;"
+	}
+	"Abur Cubur Saldırısı"
+	{
+		"index"		"1100"
+		"classes"	"weapon_glock;"
+	}
+	"Lümen"
+	{
+		"index"		"1099"
+		"classes"	"weapon_bizon;"
+	}
+	"Oyuncak Sandığı"
+	{
+		"index"		"1098"
+		"classes"	"weapon_mac10;"
+	}
+	"Örümcek Zambağı"
+	{
+		"index"		"1097"
+		"classes"	"weapon_m4a1;"
+	}
+	"Gerilla"
+	{
+		"index"		"1096"
+		"classes"	"weapon_mp7;"
+	}
+	"Yakın Takip"
+	{
+		"index"		"1095"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Fuji Dağı"
+	{
+		"index"		"1094"
+		"classes"	"weapon_mp9;"
+	}
+	"Destekli Zıplama Protokolü"
+	{
+		"index"		"1093"
+		"classes"	"weapon_fiveseven;"
+	}
+	"ZX Spectron"
+	{
+		"index"		"1092"
+		"classes"	"weapon_famas;"
+	}
+	"İncelik"
+	{
+		"index"		"1091"
+		"classes"	"weapon_elite;"
+	}
+	"Okyanus Caddesi"
+	{
+		"index"		"1090"
+		"classes"	"weapon_deagle;"
+	}
+	"BI83 Spektrumu"
+	{
+		"index"		"1089"
+		"classes"	"weapon_mag7;"
+	}
+	"Veba"
+	{
+		"index"		"1088"
+		"classes"	"weapon_aug;"
+	}
+	"Leet Museo"
+	{
+		"index"		"1087"
+		"classes"	"weapon_ak47;"
+	}
+	"Ototronik"
+	{
+		"index"		"1118"
+		"classes"	"weapon_knife_push;"
+	}
+	"Ototronik"
+	{
+		"index"		"1117"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"Ototronik"
+	{
+		"index"		"1116"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"Ototronik"
+	{
+		"index"		"1115"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"Ototronik"
+	{
+		"index"		"1114"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"Siyah Laminant"
+	{
+		"index"		"1113"
+		"classes"	"weapon_knife_push;"
+	}
+	"Siyah Laminant"
+	{
+		"index"		"1112"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"Siyah Laminant"
+	{
+		"index"		"1111"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"Siyah Laminant"
+	{
+		"index"		"1110"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"Siyah Laminant"
+	{
+		"index"		"1109"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"Mazi"
+	{
+		"index"		"1108"
+		"classes"	"weapon_knife_push;"
+	}
+	"Mazi"
+	{
+		"index"		"1107"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"Mazi"
+	{
+		"index"		"1106"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"Mazi"
+	{
+		"index"		"1105"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"Mazi"
+	{
+		"index"		"1104"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"Hatalı Elektrik Tesisatı"
+	{
+		"index"		"1066"
+		"classes"	"weapon_famas;"
+	}
+	"Yağ Değişimi"
+	{
+		"index"		"1086"
+		"classes"	"weapon_elite;"
+	}
+	"Mekanizma"
+	{
+		"index"		"1085"
+		"classes"	"weapon_ump45;"
+	}
+	"Risk Ödemesi"
+	{
+		"index"		"1084"
+		"classes"	"weapon_sg556;"
+	}
+	"Sigorta Kutusu"
+	{
+		"index"		"1083"
+		"classes"	"weapon_bizon;"
+	}
+	"Düşme Tehlikesi"
+	{
+		"index"		"1082"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Dijital Mimar"
+	{
+		"index"		"1081"
+		"classes"	"weapon_p250;"
+	}
+	"Altyapı"
+	{
+		"index"		"1080"
+		"classes"	"weapon_negev;"
+	}
+	"Lastik İzi"
+	{
+		"index"		"1079"
+		"classes"	"weapon_glock;"
+	}
+	"Lastik Profili"
+	{
+		"index"		"1078"
+		"classes"	"weapon_xm1014;"
+	}
+	"Kenetlenme"
+	{
+		"index"		"1077"
+		"classes"	"weapon_nova;"
+	}
+	"Çerçeve"
+	{
+		"index"		"1076"
+		"classes"	"weapon_cz75a;"
+	}
+	"Stratejiler"
+	{
+		"index"		"1075"
+		"classes"	"weapon_mac10;"
+	}
+	"Şematik"
+	{
+		"index"		"1074"
+		"classes"	"weapon_p90;"
+	}
+	"Yakın Tehlike"
+	{
+		"index"		"1073"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Prizma Teras"
+	{
+		"index"		"1072"
+		"classes"	"weapon_mag7;"
+	}
+	"DİKKAT!"
+	{
+		"index"		"1071"
+		"classes"	"weapon_galilar;"
+	}
+	"Yeşil Laminant"
+	{
+		"index"		"1070"
+		"classes"	"weapon_ak47;"
+	}
+	"Gamma Çoğaltıcı (Phase 4)"
+	{
+		"index"		"1123"
+		"classes"	"weapon_glock;"
+	}
+	"Gamma Çoğaltıcı (Phase 3)"
+	{
+		"index"		"1122"
+		"classes"	"weapon_glock;"
+	}
+	"Gamma Çoğaltıcı (Phase 2)"
+	{
+		"index"		"1121"
+		"classes"	"weapon_glock;"
+	}
+	"Gamma Çoğaltıcı (Phase 1)"
+	{
+		"index"		"1120"
+		"classes"	"weapon_glock;"
+	}
+	"Gamma Çoğaltıcı (Emerald)"
+	{
+		"index"		"1119"
+		"classes"	"weapon_glock;"
+	}
+	"Propaganda"
+	{
+		"index"		"1067"
+		"classes"	"weapon_mac10;"
+	}
+	"Beyaz Körlük"
+	{
+		"index"		"1065"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Sendika"
+	{
+		"index"		"1064"
+		"classes"	"weapon_cz75a;"
+	}
+	"Koalisyon"
+	{
+		"index"		"1063"
+		"classes"	"weapon_m4a1;"
+	}
+	"Sonbahar Eşarbı"
+	{
+		"index"		"1061"
+		"classes"	"weapon_mp5sd;"
+	}
+	"İlkbahar Eşarbı"
+	{
+		"index"		"1060"
+		"classes"	"weapon_ssg08;"
+	}
+	"Gazoz"
+	{
+		"index"		"1059"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Gazlı AWP"
+	{
+		"index"		"1058"
+		"classes"	"weapon_awp;"
+	}
+	"Sputnik"
+	{
+		"index"		"1056"
+		"classes"	"weapon_deagle;"
+	}
+	"Uzay Yarışı"
+	{
+		"index"		"1055"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Erime"
+	{
+		"index"		"1053"
+		"classes"	"weapon_famas;"
+	}
 	"Karahindiba"
 	{
 		"index"		"1051"
@@ -554,6 +884,166 @@
 	{
 		"index"		"941"
 		"classes"	"weapon_ak47;"
+	}
+	"Oksit Vahası"
+	{
+		"index"		"923"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Çöl Çiçeği"
+	{
+		"index"		"765"
+		"classes"	"weapon_sg556;"
+	}
+	"Çöl Tilkisi"
+	{
+		"index"		"764"
+		"classes"	"weapon_deagle;"
+	}
+	"Anolis"
+	{
+		"index"		"829"
+		"classes"	"weapon_bizon;"
+	}
+	"Yemyeşil Büyüme"
+	{
+		"index"		"828"
+		"classes"	"weapon_p90;"
+	}
+	"Nem kontrollü tütünlük"
+	{
+		"index"		"827"
+		"classes"	"weapon_m249;"
+	}
+	"Koyu Kahverengi Şam"
+	{
+		"index"		"826"
+		"classes"	"weapon_mac10;"
+	}
+	"Kuraklık"
+	{
+		"index"		"825"
+		"classes"	"weapon_p250;"
+	}
+	"Sürüklenen Ahşap"
+	{
+		"index"		"824"
+		"classes"	"weapon_elite;"
+	}
+	"Kum Fırtınası"
+	{
+		"index"		"823"
+		"classes"	"weapon_aug;"
+	}
+	"Parlak Lacivert"
+	{
+		"index"		"822"
+		"classes"	"weapon_mag7;"
+	}
+	"Zarif Sarmaşıklar"
+	{
+		"index"		"821"
+		"classes"	"weapon_xm1014;"
+	}
+	"Müzik Kutusu"
+	{
+		"index"		"820"
+		"classes"	"weapon_mp9;"
+	}
+	"Çöl Hidrası"
+	{
+		"index"		"819"
+		"classes"	"weapon_awp;"
+	}
+	"Mor DDPAT"
+	{
+		"index"		"818"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Ölüm Saldırısı"
+	{
+		"index"		"1052"
+		"classes"	"weapon_ssg08;"
+	}
+	"Av"
+	{
+		"index"		"935"
+		"classes"	"weapon_mp7;weapon_ssg08;"
+	}
+	"Kemik Beyazı"
+	{
+		"index"		"934"
+		"classes"	"weapon_sg556;"
+	}
+	"Gece Yarısı Palmiyesi"
+	{
+		"index"		"933"
+		"classes"	"weapon_m249;weapon_cz75a;"
+	}
+	"Solmuş Sarmaşık"
+	{
+		"index"		"932"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Eski Kökler"
+	{
+		"index"		"931"
+		"classes"	"weapon_mp9;"
+	}
+	"Yeni Kökler"
+	{
+		"index"		"930"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Akarkum"
+	{
+		"index"		"929"
+		"classes"	"weapon_nova;"
+	}
+	"Siyah ve Açık Kahverengi"
+	{
+		"index"		"928"
+		"classes"	"weapon_p250;"
+	}
+	"Kuru Ahşap"
+	{
+		"index"		"927"
+		"classes"	"weapon_aug;"
+	}
+	"Kırmızı DDPAT"
+	{
+		"index"		"926"
+		"classes"	"weapon_m4a1;"
+	}
+	"Çöl DDPAT"
+	{
+		"index"		"925"
+		"classes"	"weapon_p90;"
+	}
+	"Çöl Çalısı"
+	{
+		"index"		"924"
+		"classes"	"weapon_revolver;"
+	}
+	"Turuncu Anolis"
+	{
+		"index"		"922"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Altın Arabesk"
+	{
+		"index"		"921"
+		"classes"	"weapon_ak47;"
+	}
+	"Susuz"
+	{
+		"index"		"880"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Solgun"
+	{
+		"index"		"879"
+		"classes"	"weapon_ump45;"
 	}
 	"Kutlama"
 	{
@@ -1858,7 +2348,7 @@
 	"Boşel"
 	{
 		"index"		"581"
-		"classes"	"weapon_knife_m9_bayonet;"
+		"classes"	"weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Boşel"
 	{
@@ -1868,7 +2358,7 @@
 	"Parlak Su"
 	{
 		"index"		"579"
-		"classes"	"weapon_knife_m9_bayonet;"
+		"classes"	"weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Parlak Su"
 	{
@@ -1903,27 +2393,27 @@
 	"Gamma Çoğaltıcı (Phase 4)"
 	{
 		"index"		"572"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Gamma Çoğaltıcı (Phase 3)"
 	{
 		"index"		"571"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Gamma Çoğaltıcı (Phase 2)"
 	{
 		"index"		"570"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Gamma Çoğaltıcı (Phase 1)"
 	{
 		"index"		"569"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Gamma Çoğaltıcı (Emerald)"
 	{
 		"index"		"568"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Siyah Laminant"
 	{
@@ -2088,7 +2578,7 @@
 	"Emniyet Ağı"
 	{
 		"index"		"795"
-		"classes"	"weapon_ak47;"
+		"classes"	"weapon_ak47;weapon_tec9;"
 	}
 	"Tarayıcı"
 	{
@@ -3673,7 +4163,7 @@
 	"Son Durak"
 	{
 		"index"		"250"
-		"classes"	"weapon_sawedoff;weapon_mp7;"
+		"classes"	"weapon_ump45;weapon_sawedoff;weapon_mp7;"
 	}
 	"Kobalt Kuvars"
 	{
@@ -3683,7 +4173,7 @@
 	"Kırmızı Kuvars"
 	{
 		"index"		"248"
-		"classes"	"weapon_tec9;"
+		"classes"	"weapon_tec9;weapon_nova;"
 	}
 	"Şam Çeliği"
 	{
@@ -3693,7 +4183,7 @@
 	"Solgun Sarı"
 	{
 		"index"		"246"
-		"classes"	"weapon_mac10;weapon_sawedoff;weapon_hkp2000;"
+		"classes"	"weapon_aug;weapon_galilar;weapon_mac10;weapon_sawedoff;weapon_hkp2000;"
 	}
 	"Ordu Gözcüsü"
 	{
@@ -3723,7 +4213,7 @@
 	"Kali Kamuflaj"
 	{
 		"index"		"240"
-		"classes"	"weapon_xm1014;weapon_negev;"
+		"classes"	"weapon_famas;weapon_xm1014;weapon_negev;"
 	}
 	"Mavi Vari Kamuflaj"
 	{
@@ -4268,7 +4758,7 @@
 	"Pembe DDPAT"
 	{
 		"index"		"84"
-		"classes"	"weapon_awp;"
+		"classes"	"weapon_glock;weapon_awp;"
 	}
 	"Turuncu DDPAT"
 	{
@@ -4318,7 +4808,7 @@
 	"Karbon Fiber"
 	{
 		"index"		"70"
-		"classes"	"weapon_ump45;weapon_bizon;weapon_mag7;weapon_scar20;"
+		"classes"	"weapon_ump45;weapon_bizon;weapon_mag7;weapon_scar20;weapon_ssg08;"
 	}
 	"Soğukkanlı"
 	{
@@ -4368,7 +4858,7 @@
 	"Sertleştirilmiş Kasa"
 	{
 		"index"		"44"
-		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
+		"classes"	"weapon_fiveseven;weapon_ak47;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Lekeli"
 	{
@@ -4403,7 +4893,7 @@
 	"Alev"
 	{
 		"index"		"37"
-		"classes"	"weapon_deagle;weapon_ump45;"
+		"classes"	"weapon_deagle;weapon_ump45;weapon_revolver;"
 	}
 	"Kemikleşmiş"
 	{
