--- a/addons/sourcemod/configs/weapons/weapons_brazilian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_brazilian.cfg
@@ -1,5 +1,335 @@
 "Skins"
 {
+	"Cães de Guarda"
+	{
+		"index"		"1103"
+		"classes"	"weapon_xm1014;"
+	}
+	"Lótus Negra"
+	{
+		"index"		"1102"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Modo Turbo"
+	{
+		"index"		"1101"
+		"classes"	"weapon_ssg08;"
+	}
+	"Ataque do Lanche"
+	{
+		"index"		"1100"
+		"classes"	"weapon_glock;"
+	}
+	"Lúmen"
+	{
+		"index"		"1099"
+		"classes"	"weapon_bizon;"
+	}
+	"Caixa de Brinquedos"
+	{
+		"index"		"1098"
+		"classes"	"weapon_mac10;"
+	}
+	"Lírio-Aranha"
+	{
+		"index"		"1097"
+		"classes"	"weapon_m4a1;"
+	}
+	"Guerrilha"
+	{
+		"index"		"1096"
+		"classes"	"weapon_mp7;"
+	}
+	"Guia Geral"
+	{
+		"index"		"1095"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Monte Fuji"
+	{
+		"index"		"1094"
+		"classes"	"weapon_mp9;"
+	}
+	"Protocolo de Impulso"
+	{
+		"index"		"1093"
+		"classes"	"weapon_fiveseven;"
+	}
+	"ZX Espectro"
+	{
+		"index"		"1092"
+		"classes"	"weapon_famas;"
+	}
+	"Chapa"
+	{
+		"index"		"1091"
+		"classes"	"weapon_elite;"
+	}
+	"Ocean Drive"
+	{
+		"index"		"1090"
+		"classes"	"weapon_deagle;"
+	}
+	"Espectro Bi83"
+	{
+		"index"		"1089"
+		"classes"	"weapon_mag7;"
+	}
+	"Praga"
+	{
+		"index"		"1088"
+		"classes"	"weapon_aug;"
+	}
+	"MU53U"
+	{
+		"index"		"1087"
+		"classes"	"weapon_ak47;"
+	}
+	"Autotrônica"
+	{
+		"index"		"1118"
+		"classes"	"weapon_knife_push;"
+	}
+	"Autotrônica"
+	{
+		"index"		"1117"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"Autotrônica"
+	{
+		"index"		"1116"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"Autotrônica"
+	{
+		"index"		"1115"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"Autotrônica"
+	{
+		"index"		"1114"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"Preto Laminado"
+	{
+		"index"		"1113"
+		"classes"	"weapon_knife_push;"
+	}
+	"Preto Laminado"
+	{
+		"index"		"1112"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"Preto Laminado"
+	{
+		"index"		"1111"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"Preto Laminado"
+	{
+		"index"		"1110"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"Preto Laminado"
+	{
+		"index"		"1109"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"Sabedoria"
+	{
+		"index"		"1108"
+		"classes"	"weapon_knife_push;"
+	}
+	"Sabedoria"
+	{
+		"index"		"1107"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"Sabedoria"
+	{
+		"index"		"1106"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"Sabedoria"
+	{
+		"index"		"1105"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"Sabedoria"
+	{
+		"index"		"1104"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"Fiação Defeituosa"
+	{
+		"index"		"1066"
+		"classes"	"weapon_famas;"
+	}
+	"Troca de Óleo"
+	{
+		"index"		"1086"
+		"classes"	"weapon_elite;"
+	}
+	"Mecanismo"
+	{
+		"index"		"1085"
+		"classes"	"weapon_ump45;"
+	}
+	"Insalubre"
+	{
+		"index"		"1084"
+		"classes"	"weapon_sg556;"
+	}
+	"Disjuntor"
+	{
+		"index"		"1083"
+		"classes"	"weapon_bizon;"
+	}
+	"Perigo de Queda"
+	{
+		"index"		"1082"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Arquitetura Digital"
+	{
+		"index"		"1081"
+		"classes"	"weapon_p250;"
+	}
+	"Infraestrutura"
+	{
+		"index"		"1080"
+		"classes"	"weapon_negev;"
+	}
+	"Pneus de Pista"
+	{
+		"index"		"1079"
+		"classes"	"weapon_glock;"
+	}
+	"Banda de Rodagem"
+	{
+		"index"		"1078"
+		"classes"	"weapon_xm1014;"
+	}
+	"Interligada"
+	{
+		"index"		"1077"
+		"classes"	"weapon_nova;"
+	}
+	"Estrutura"
+	{
+		"index"		"1076"
+		"classes"	"weapon_cz75a;"
+	}
+	"Planos"
+	{
+		"index"		"1075"
+		"classes"	"weapon_mac10;"
+	}
+	"Esquemática"
+	{
+		"index"		"1074"
+		"classes"	"weapon_p90;"
+	}
+	"Perigo Iminente"
+	{
+		"index"		"1073"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Terraço Prismático"
+	{
+		"index"		"1072"
+		"classes"	"weapon_mag7;"
+	}
+	"CUIDADO!"
+	{
+		"index"		"1071"
+		"classes"	"weapon_galilar;"
+	}
+	"Verde Laminado"
+	{
+		"index"		"1070"
+		"classes"	"weapon_ak47;"
+	}
+	"Doppler Gama (Phase 4)"
+	{
+		"index"		"1123"
+		"classes"	"weapon_glock;"
+	}
+	"Doppler Gama (Phase 3)"
+	{
+		"index"		"1122"
+		"classes"	"weapon_glock;"
+	}
+	"Doppler Gama (Phase 2)"
+	{
+		"index"		"1121"
+		"classes"	"weapon_glock;"
+	}
+	"Doppler Gama (Phase 1)"
+	{
+		"index"		"1120"
+		"classes"	"weapon_glock;"
+	}
+	"Doppler Gama (Emerald)"
+	{
+		"index"		"1119"
+		"classes"	"weapon_glock;"
+	}
+	"Propaganda"
+	{
+		"index"		"1067"
+		"classes"	"weapon_mac10;"
+	}
+	"Deu um Branco"
+	{
+		"index"		"1065"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Sindicato"
+	{
+		"index"		"1064"
+		"classes"	"weapon_cz75a;"
+	}
+	"Coalizão"
+	{
+		"index"		"1063"
+		"classes"	"weapon_m4a1;"
+	}
+	"Formas Outonais"
+	{
+		"index"		"1061"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Formas Primaveris"
+	{
+		"index"		"1060"
+		"classes"	"weapon_ssg08;"
+	}
+	"Efervescente"
+	{
+		"index"		"1059"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Efervescente"
+	{
+		"index"		"1058"
+		"classes"	"weapon_awp;"
+	}
+	"Sputnik"
+	{
+		"index"		"1056"
+		"classes"	"weapon_deagle;"
+	}
+	"Corrida Espacial"
+	{
+		"index"		"1055"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Derretimento"
+	{
+		"index"		"1053"
+		"classes"	"weapon_famas;"
+	}
 	"Sopro Eólico"
 	{
 		"index"		"1051"
@@ -20,7 +350,7 @@
 		"index"		"1048"
 		"classes"	"weapon_sg556;"
 	}
-	"Junk Yard"
+	"Ferro-Velho"
 	{
 		"index"		"1047"
 		"classes"	"weapon_revolver;"
@@ -554,6 +884,166 @@
 	{
 		"index"		"941"
 		"classes"	"weapon_ak47;"
+	}
+	"Oasis Oxidado"
+	{
+		"index"		"923"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Florescer Desértico"
+	{
+		"index"		"765"
+		"classes"	"weapon_sg556;"
+	}
+	"Feneco"
+	{
+		"index"		"764"
+		"classes"	"weapon_deagle;"
+	}
+	"Anolis"
+	{
+		"index"		"829"
+		"classes"	"weapon_bizon;"
+	}
+	"Crescimento Verdejante"
+	{
+		"index"		"828"
+		"classes"	"weapon_p90;"
+	}
+	"Humidor"
+	{
+		"index"		"827"
+		"classes"	"weapon_m249;"
+	}
+	"Damasco Terroso"
+	{
+		"index"		"826"
+		"classes"	"weapon_mac10;"
+	}
+	"Árida"
+	{
+		"index"		"825"
+		"classes"	"weapon_p250;"
+	}
+	"Madeira Flutuante"
+	{
+		"index"		"824"
+		"classes"	"weapon_elite;"
+	}
+	"Tempestade de Areia"
+	{
+		"index"		"823"
+		"classes"	"weapon_aug;"
+	}
+	"Brilho Marinho"
+	{
+		"index"		"822"
+		"classes"	"weapon_mag7;"
+	}
+	"Vinhas Elegantes"
+	{
+		"index"		"821"
+		"classes"	"weapon_xm1014;"
+	}
+	"Caixa de Música"
+	{
+		"index"		"820"
+		"classes"	"weapon_mp9;"
+	}
+	"Hidra do Deserto"
+	{
+		"index"		"819"
+		"classes"	"weapon_awp;"
+	}
+	"Camuflagem Digital — Roxo"
+	{
+		"index"		"818"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Picada Mortal"
+	{
+		"index"		"1052"
+		"classes"	"weapon_ssg08;"
+	}
+	"Presa"
+	{
+		"index"		"935"
+		"classes"	"weapon_mp7;weapon_ssg08;"
+	}
+	"Esbranquiçada"
+	{
+		"index"		"934"
+		"classes"	"weapon_sg556;"
+	}
+	"Palmeira da Meia-Noite"
+	{
+		"index"		"933"
+		"classes"	"weapon_m249;weapon_cz75a;"
+	}
+	"Videira Murcha"
+	{
+		"index"		"932"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Raízes Velhas"
+	{
+		"index"		"931"
+		"classes"	"weapon_mp9;"
+	}
+	"Raízes Novas"
+	{
+		"index"		"930"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Areia Movediça"
+	{
+		"index"		"929"
+		"classes"	"weapon_nova;"
+	}
+	"Preto e Bronze"
+	{
+		"index"		"928"
+		"classes"	"weapon_p250;"
+	}
+	"Madeira Ressecada"
+	{
+		"index"		"927"
+		"classes"	"weapon_aug;"
+	}
+	"Camuflagem Digital — Vermelho"
+	{
+		"index"		"926"
+		"classes"	"weapon_m4a1;"
+	}
+	"Camuflagem Digital — Deserto"
+	{
+		"index"		"925"
+		"classes"	"weapon_p90;"
+	}
+	"Camuflagem Desértica"
+	{
+		"index"		"924"
+		"classes"	"weapon_revolver;"
+	}
+	"Anolis Laranja"
+	{
+		"index"		"922"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Arabesca Dourada"
+	{
+		"index"		"921"
+		"classes"	"weapon_ak47;"
+	}
+	"Ressecada"
+	{
+		"index"		"880"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Degradê"
+	{
+		"index"		"879"
+		"classes"	"weapon_ump45;"
 	}
 	"Comemoração"
 	{
@@ -1140,7 +1630,7 @@
 		"index"		"728"
 		"classes"	"weapon_mp7;"
 	}
-	"Lírio da Meia-noite"
+	"Lírio da Meia-Noite"
 	{
 		"index"		"727"
 		"classes"	"weapon_aug;"
@@ -1858,7 +2348,7 @@
 	"Mão Livre"
 	{
 		"index"		"581"
-		"classes"	"weapon_knife_m9_bayonet;"
+		"classes"	"weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Mão Livre"
 	{
@@ -1868,7 +2358,7 @@
 	"Águas Claras"
 	{
 		"index"		"579"
-		"classes"	"weapon_knife_m9_bayonet;"
+		"classes"	"weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Águas Claras"
 	{
@@ -1903,27 +2393,27 @@
 	"Doppler Gama (Phase 4)"
 	{
 		"index"		"572"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Doppler Gama (Phase 3)"
 	{
 		"index"		"571"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Doppler Gama (Phase 2)"
 	{
 		"index"		"570"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Doppler Gama (Phase 1)"
 	{
 		"index"		"569"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Doppler Gama (Emerald)"
 	{
 		"index"		"568"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Preto Laminado"
 	{
@@ -2088,7 +2578,7 @@
 	"Grade de Proteção"
 	{
 		"index"		"795"
-		"classes"	"weapon_ak47;"
+		"classes"	"weapon_ak47;weapon_tec9;"
 	}
 	"Varredora"
 	{
@@ -2610,7 +3100,7 @@
 		"index"		"469"
 		"classes"	"weapon_deagle;"
 	}
-	"Tempestade da Meia-noite"
+	"Tempestade da Meia-Noite"
 	{
 		"index"		"468"
 		"classes"	"weapon_deagle;"
@@ -2675,7 +3165,7 @@
 		"index"		"455"
 		"classes"	"weapon_aug;"
 	}
-	"Verde Caqui"
+	"Verde-Cáqui"
 	{
 		"index"		"454"
 		"classes"	"weapon_usp_silencer;"
@@ -3673,7 +4163,7 @@
 	"Para Tudo"
 	{
 		"index"		"250"
-		"classes"	"weapon_sawedoff;weapon_mp7;"
+		"classes"	"weapon_ump45;weapon_sawedoff;weapon_mp7;"
 	}
 	"Quartzo de Cobalto"
 	{
@@ -3683,7 +4173,7 @@
 	"Quartzo Vermelho"
 	{
 		"index"		"248"
-		"classes"	"weapon_tec9;"
+		"classes"	"weapon_tec9;weapon_nova;"
 	}
 	"Aço de Damasco"
 	{
@@ -3693,7 +4183,7 @@
 	"Âmbar"
 	{
 		"index"		"246"
-		"classes"	"weapon_mac10;weapon_sawedoff;weapon_hkp2000;"
+		"classes"	"weapon_aug;weapon_galilar;weapon_mac10;weapon_sawedoff;weapon_hkp2000;"
 	}
 	"Reconhecimento Militar"
 	{
@@ -3723,7 +4213,7 @@
 	"CaliCamo"
 	{
 		"index"		"240"
-		"classes"	"weapon_xm1014;weapon_negev;"
+		"classes"	"weapon_famas;weapon_xm1014;weapon_negev;"
 	}
 	"VariCamo Azul"
 	{
@@ -4268,7 +4758,7 @@
 	"Camuflagem Digital — Rosa"
 	{
 		"index"		"84"
-		"classes"	"weapon_awp;"
+		"classes"	"weapon_glock;weapon_awp;"
 	}
 	"Camuflagem Digital — Laranja"
 	{
@@ -4318,7 +4808,7 @@
 	"Fibra de Carbono"
 	{
 		"index"		"70"
-		"classes"	"weapon_ump45;weapon_bizon;weapon_mag7;weapon_scar20;"
+		"classes"	"weapon_ump45;weapon_bizon;weapon_mag7;weapon_scar20;weapon_ssg08;"
 	}
 	"Sangue Frio"
 	{
@@ -4368,7 +4858,7 @@
 	"Aquecimento de Aço"
 	{
 		"index"		"44"
-		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
+		"classes"	"weapon_fiveseven;weapon_ak47;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Manchado"
 	{
@@ -4403,7 +4893,7 @@
 	"Chamas"
 	{
 		"index"		"37"
-		"classes"	"weapon_deagle;weapon_ump45;"
+		"classes"	"weapon_deagle;weapon_ump45;weapon_revolver;"
 	}
 	"Ossificado"
 	{
