--- a/addons/sourcemod/configs/weapons/weapons_finnish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_finnish.cfg
@@ -1,5 +1,335 @@
 "Skins"
 {
+	"Watchdog"
+	{
+		"index"		"1103"
+		"classes"	"weapon_xm1014;"
+	}
+	"Black Lotus"
+	{
+		"index"		"1102"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Turbo Peek"
+	{
+		"index"		"1101"
+		"classes"	"weapon_ssg08;"
+	}
+	"Snack Attack"
+	{
+		"index"		"1100"
+		"classes"	"weapon_glock;"
+	}
+	"Lumen"
+	{
+		"index"		"1099"
+		"classes"	"weapon_bizon;"
+	}
+	"Toybox"
+	{
+		"index"		"1098"
+		"classes"	"weapon_mac10;"
+	}
+	"Spider Lily"
+	{
+		"index"		"1097"
+		"classes"	"weapon_m4a1;"
+	}
+	"Guerrilla"
+	{
+		"index"		"1096"
+		"classes"	"weapon_mp7;"
+	}
+	"Keeping Tabs"
+	{
+		"index"		"1095"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Mount Fuji"
+	{
+		"index"		"1094"
+		"classes"	"weapon_mp9;"
+	}
+	"Boost Protocol"
+	{
+		"index"		"1093"
+		"classes"	"weapon_fiveseven;"
+	}
+	"ZX Spectron"
+	{
+		"index"		"1092"
+		"classes"	"weapon_famas;"
+	}
+	"Tread"
+	{
+		"index"		"1091"
+		"classes"	"weapon_elite;"
+	}
+	"Ocean Drive"
+	{
+		"index"		"1090"
+		"classes"	"weapon_deagle;"
+	}
+	"BI83 Spectrum"
+	{
+		"index"		"1089"
+		"classes"	"weapon_mag7;"
+	}
+	"Plague"
+	{
+		"index"		"1088"
+		"classes"	"weapon_aug;"
+	}
+	"Leet Museo"
+	{
+		"index"		"1087"
+		"classes"	"weapon_ak47;"
+	}
+	"Autotroninen"
+	{
+		"index"		"1118"
+		"classes"	"weapon_knife_push;"
+	}
+	"Autotroninen"
+	{
+		"index"		"1117"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"Autotroninen"
+	{
+		"index"		"1116"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"Autotroninen"
+	{
+		"index"		"1115"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"Autotroninen"
+	{
+		"index"		"1114"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"Musta laminaatti"
+	{
+		"index"		"1113"
+		"classes"	"weapon_knife_push;"
+	}
+	"Musta laminaatti"
+	{
+		"index"		"1112"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"Musta laminaatti"
+	{
+		"index"		"1111"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"Musta laminaatti"
+	{
+		"index"		"1110"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"Musta laminaatti"
+	{
+		"index"		"1109"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"Taru"
+	{
+		"index"		"1108"
+		"classes"	"weapon_knife_push;"
+	}
+	"Taru"
+	{
+		"index"		"1107"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"Taru"
+	{
+		"index"		"1106"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"Taru"
+	{
+		"index"		"1105"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"Taru"
+	{
+		"index"		"1104"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"Faulty Wiring"
+	{
+		"index"		"1066"
+		"classes"	"weapon_famas;"
+	}
+	"Oil Change"
+	{
+		"index"		"1086"
+		"classes"	"weapon_elite;"
+	}
+	"Mechanism"
+	{
+		"index"		"1085"
+		"classes"	"weapon_ump45;"
+	}
+	"Hazard Pay"
+	{
+		"index"		"1084"
+		"classes"	"weapon_sg556;"
+	}
+	"Breaker Box"
+	{
+		"index"		"1083"
+		"classes"	"weapon_bizon;"
+	}
+	"Fall Hazard"
+	{
+		"index"		"1082"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Digital Architect"
+	{
+		"index"		"1081"
+		"classes"	"weapon_p250;"
+	}
+	"Infrastructure"
+	{
+		"index"		"1080"
+		"classes"	"weapon_negev;"
+	}
+	"Red Tire"
+	{
+		"index"		"1079"
+		"classes"	"weapon_glock;"
+	}
+	"Blue Tire"
+	{
+		"index"		"1078"
+		"classes"	"weapon_xm1014;"
+	}
+	"Interlock"
+	{
+		"index"		"1077"
+		"classes"	"weapon_nova;"
+	}
+	"Framework"
+	{
+		"index"		"1076"
+		"classes"	"weapon_cz75a;"
+	}
+	"Strats"
+	{
+		"index"		"1075"
+		"classes"	"weapon_mac10;"
+	}
+	"Schematic"
+	{
+		"index"		"1074"
+		"classes"	"weapon_p90;"
+	}
+	"Imminent Danger"
+	{
+		"index"		"1073"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Prism Terrace"
+	{
+		"index"		"1072"
+		"classes"	"weapon_mag7;"
+	}
+	"CAUTION!"
+	{
+		"index"		"1071"
+		"classes"	"weapon_galilar;"
+	}
+	"Green Laminate"
+	{
+		"index"		"1070"
+		"classes"	"weapon_ak47;"
+	}
+	"Gamma Doppler (Phase 4)"
+	{
+		"index"		"1123"
+		"classes"	"weapon_glock;"
+	}
+	"Gamma Doppler (Phase 3)"
+	{
+		"index"		"1122"
+		"classes"	"weapon_glock;"
+	}
+	"Gamma Doppler (Phase 2)"
+	{
+		"index"		"1121"
+		"classes"	"weapon_glock;"
+	}
+	"Gamma Doppler (Phase 1)"
+	{
+		"index"		"1120"
+		"classes"	"weapon_glock;"
+	}
+	"Gamma Doppler (Emerald)"
+	{
+		"index"		"1119"
+		"classes"	"weapon_glock;"
+	}
+	"Propaganda"
+	{
+		"index"		"1067"
+		"classes"	"weapon_mac10;"
+	}
+	"Vitivalkoinen"
+	{
+		"index"		"1065"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Syndicate"
+	{
+		"index"		"1064"
+		"classes"	"weapon_cz75a;"
+	}
+	"The Coalition"
+	{
+		"index"		"1063"
+		"classes"	"weapon_m4a1;"
+	}
+	"Autumn Twilly"
+	{
+		"index"		"1061"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Spring Twilly"
+	{
+		"index"		"1060"
+		"classes"	"weapon_ssg08;"
+	}
+	"Fizzy POP"
+	{
+		"index"		"1059"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"POP AWP"
+	{
+		"index"		"1058"
+		"classes"	"weapon_awp;"
+	}
+	"Sputnik"
+	{
+		"index"		"1056"
+		"classes"	"weapon_deagle;"
+	}
+	"Space Race"
+	{
+		"index"		"1055"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Meltdown"
+	{
+		"index"		"1053"
+		"classes"	"weapon_famas;"
+	}
 	"Tuulen viemää"
 	{
 		"index"		"1051"
@@ -554,6 +884,166 @@
 	{
 		"index"		"941"
 		"classes"	"weapon_ak47;"
+	}
+	"Oxide Oasis"
+	{
+		"index"		"923"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Desert Blossom"
+	{
+		"index"		"765"
+		"classes"	"weapon_sg556;"
+	}
+	"Fennec Fox"
+	{
+		"index"		"764"
+		"classes"	"weapon_deagle;"
+	}
+	"Anolis"
+	{
+		"index"		"829"
+		"classes"	"weapon_bizon;"
+	}
+	"Verdant Growth"
+	{
+		"index"		"828"
+		"classes"	"weapon_p90;"
+	}
+	"Humidor"
+	{
+		"index"		"827"
+		"classes"	"weapon_m249;"
+	}
+	"Sienna Damask"
+	{
+		"index"		"826"
+		"classes"	"weapon_mac10;"
+	}
+	"Drought"
+	{
+		"index"		"825"
+		"classes"	"weapon_p250;"
+	}
+	"Drift Wood"
+	{
+		"index"		"824"
+		"classes"	"weapon_elite;"
+	}
+	"Sand Storm"
+	{
+		"index"		"823"
+		"classes"	"weapon_aug;"
+	}
+	"Navy Sheen"
+	{
+		"index"		"822"
+		"classes"	"weapon_mag7;"
+	}
+	"Elegant Vines"
+	{
+		"index"		"821"
+		"classes"	"weapon_xm1014;"
+	}
+	"Music Box"
+	{
+		"index"		"820"
+		"classes"	"weapon_mp9;"
+	}
+	"Desert Hydra"
+	{
+		"index"		"819"
+		"classes"	"weapon_awp;"
+	}
+	"Purple DDPAT"
+	{
+		"index"		"818"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Death Strike"
+	{
+		"index"		"1052"
+		"classes"	"weapon_ssg08;"
+	}
+	"Prey"
+	{
+		"index"		"935"
+		"classes"	"weapon_mp7;weapon_ssg08;"
+	}
+	"Bleached"
+	{
+		"index"		"934"
+		"classes"	"weapon_sg556;"
+	}
+	"Midnight Palm"
+	{
+		"index"		"933"
+		"classes"	"weapon_m249;weapon_cz75a;"
+	}
+	"Withered Vine"
+	{
+		"index"		"932"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Old Roots"
+	{
+		"index"		"931"
+		"classes"	"weapon_mp9;"
+	}
+	"New Roots"
+	{
+		"index"		"930"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Quick Sand"
+	{
+		"index"		"929"
+		"classes"	"weapon_nova;"
+	}
+	"Black & Tan"
+	{
+		"index"		"928"
+		"classes"	"weapon_p250;"
+	}
+	"Spalted Wood"
+	{
+		"index"		"927"
+		"classes"	"weapon_aug;"
+	}
+	"Red DDPAT"
+	{
+		"index"		"926"
+		"classes"	"weapon_m4a1;"
+	}
+	"Desert DDPAT"
+	{
+		"index"		"925"
+		"classes"	"weapon_p90;"
+	}
+	"Desert Brush"
+	{
+		"index"		"924"
+		"classes"	"weapon_revolver;"
+	}
+	"Orange Anolis"
+	{
+		"index"		"922"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Gold Arabesque"
+	{
+		"index"		"921"
+		"classes"	"weapon_ak47;"
+	}
+	"Parched"
+	{
+		"index"		"880"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Häivytys"
+	{
+		"index"		"879"
+		"classes"	"weapon_ump45;"
 	}
 	"Muistojuhla"
 	{
@@ -1858,7 +2348,7 @@
 	"Vapaa käsi"
 	{
 		"index"		"581"
-		"classes"	"weapon_knife_m9_bayonet;"
+		"classes"	"weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Vapaa käsi"
 	{
@@ -1868,7 +2358,7 @@
 	"Kirkas vesi"
 	{
 		"index"		"579"
-		"classes"	"weapon_knife_m9_bayonet;"
+		"classes"	"weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Kirkas vesi"
 	{
@@ -1903,27 +2393,27 @@
 	"Gamma Doppler (Phase 4)"
 	{
 		"index"		"572"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Gamma Doppler (Phase 3)"
 	{
 		"index"		"571"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Gamma Doppler (Phase 2)"
 	{
 		"index"		"570"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Gamma Doppler (Phase 1)"
 	{
 		"index"		"569"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Gamma Doppler (Emerald)"
 	{
 		"index"		"568"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Musta laminaatti"
 	{
@@ -2088,7 +2578,7 @@
 	"Turvaverkko"
 	{
 		"index"		"795"
-		"classes"	"weapon_ak47;"
+		"classes"	"weapon_ak47;weapon_tec9;"
 	}
 	"Lakaisija"
 	{
@@ -3673,7 +4163,7 @@
 	"Stoppi"
 	{
 		"index"		"250"
-		"classes"	"weapon_sawedoff;weapon_mp7;"
+		"classes"	"weapon_ump45;weapon_sawedoff;weapon_mp7;"
 	}
 	"Kobolttikvartsi"
 	{
@@ -3683,7 +4173,7 @@
 	"Punakvartsi"
 	{
 		"index"		"248"
-		"classes"	"weapon_tec9;"
+		"classes"	"weapon_tec9;weapon_nova;"
 	}
 	"Damaskiteräs"
 	{
@@ -3693,7 +4183,7 @@
 	"Himmeä meripihka"
 	{
 		"index"		"246"
-		"classes"	"weapon_mac10;weapon_sawedoff;weapon_hkp2000;"
+		"classes"	"weapon_aug;weapon_galilar;weapon_mac10;weapon_sawedoff;weapon_hkp2000;"
 	}
 	"Tiedustelija"
 	{
@@ -3723,7 +4213,7 @@
 	"CaliCamo"
 	{
 		"index"		"240"
-		"classes"	"weapon_xm1014;weapon_negev;"
+		"classes"	"weapon_famas;weapon_xm1014;weapon_negev;"
 	}
 	"Sininen VariCamo"
 	{
@@ -4268,7 +4758,7 @@
 	"Pinkki DDPAT"
 	{
 		"index"		"84"
-		"classes"	"weapon_awp;"
+		"classes"	"weapon_glock;weapon_awp;"
 	}
 	"Oranssi DDPAT"
 	{
@@ -4318,7 +4808,7 @@
 	"Hiilikuitu"
 	{
 		"index"		"70"
-		"classes"	"weapon_ump45;weapon_bizon;weapon_mag7;weapon_scar20;"
+		"classes"	"weapon_ump45;weapon_bizon;weapon_mag7;weapon_scar20;weapon_ssg08;"
 	}
 	"Kylmäverinen"
 	{
@@ -4368,7 +4858,7 @@
 	"Hiiletyskarkaistu"
 	{
 		"index"		"44"
-		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
+		"classes"	"weapon_fiveseven;weapon_ak47;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Värjäytynyt"
 	{
@@ -4403,7 +4893,7 @@
 	"Roihu"
 	{
 		"index"		"37"
-		"classes"	"weapon_deagle;weapon_ump45;"
+		"classes"	"weapon_deagle;weapon_ump45;weapon_revolver;"
 	}
 	"Luutunut"
 	{
