--- a/addons/sourcemod/configs/weapons/weapons_german.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_german.cfg
@@ -1,26 +1,356 @@
 "Skins"
 {
-	"Windblown"
+	"Wachhund"
+	{
+		"index"		"1103"
+		"classes"	"weapon_xm1014;"
+	}
+	"Schwarzer Lotus"
+	{
+		"index"		"1102"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Turbomodus"
+	{
+		"index"		"1101"
+		"classes"	"weapon_ssg08;"
+	}
+	"Heißhunger"
+	{
+		"index"		"1100"
+		"classes"	"weapon_glock;"
+	}
+	"Lumen"
+	{
+		"index"		"1099"
+		"classes"	"weapon_bizon;"
+	}
+	"Spielzeugkiste"
+	{
+		"index"		"1098"
+		"classes"	"weapon_mac10;"
+	}
+	"Spinnenlilie"
+	{
+		"index"		"1097"
+		"classes"	"weapon_m4a1;"
+	}
+	"Guerilla"
+	{
+		"index"		"1096"
+		"classes"	"weapon_mp7;"
+	}
+	"Unter Überwachung"
+	{
+		"index"		"1095"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Fuji"
+	{
+		"index"		"1094"
+		"classes"	"weapon_mp9;"
+	}
+	"Boost-Protokoll"
+	{
+		"index"		"1093"
+		"classes"	"weapon_fiveseven;"
+	}
+	"ZX-Spektron"
+	{
+		"index"		"1092"
+		"classes"	"weapon_famas;"
+	}
+	"Tritt"
+	{
+		"index"		"1091"
+		"classes"	"weapon_elite;"
+	}
+	"Ozeanstraße"
+	{
+		"index"		"1090"
+		"classes"	"weapon_deagle;"
+	}
+	"BI83-Spektrum"
+	{
+		"index"		"1089"
+		"classes"	"weapon_mag7;"
+	}
+	"Seuche"
+	{
+		"index"		"1088"
+		"classes"	"weapon_aug;"
+	}
+	"Leet Museo"
+	{
+		"index"		"1087"
+		"classes"	"weapon_ak47;"
+	}
+	"Autotronik"
+	{
+		"index"		"1118"
+		"classes"	"weapon_knife_push;"
+	}
+	"Autotronik"
+	{
+		"index"		"1117"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"Autotronik"
+	{
+		"index"		"1116"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"Autotronik"
+	{
+		"index"		"1115"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"Autotronik"
+	{
+		"index"		"1114"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"Schwarz laminiert"
+	{
+		"index"		"1113"
+		"classes"	"weapon_knife_push;"
+	}
+	"Schwarz laminiert"
+	{
+		"index"		"1112"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"Schwarz laminiert"
+	{
+		"index"		"1111"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"Schwarz laminiert"
+	{
+		"index"		"1110"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"Schwarz laminiert"
+	{
+		"index"		"1109"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"Weisheit"
+	{
+		"index"		"1108"
+		"classes"	"weapon_knife_push;"
+	}
+	"Weisheit"
+	{
+		"index"		"1107"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"Weisheit"
+	{
+		"index"		"1106"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"Weisheit"
+	{
+		"index"		"1105"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"Weisheit"
+	{
+		"index"		"1104"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"Fehlerhafte Verkabelung"
+	{
+		"index"		"1066"
+		"classes"	"weapon_famas;"
+	}
+	"Ölwechsel"
+	{
+		"index"		"1086"
+		"classes"	"weapon_elite;"
+	}
+	"Mechanismus"
+	{
+		"index"		"1085"
+		"classes"	"weapon_ump45;"
+	}
+	"Gefahrenzulage"
+	{
+		"index"		"1084"
+		"classes"	"weapon_sg556;"
+	}
+	"Unterbrecherkasten"
+	{
+		"index"		"1083"
+		"classes"	"weapon_bizon;"
+	}
+	"Sturzgefahr"
+	{
+		"index"		"1082"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Digitaler Architekt"
+	{
+		"index"		"1081"
+		"classes"	"weapon_p250;"
+	}
+	"Infrastruktur"
+	{
+		"index"		"1080"
+		"classes"	"weapon_negev;"
+	}
+	"Rennstreckenreifen"
+	{
+		"index"		"1079"
+		"classes"	"weapon_glock;"
+	}
+	"Reifenprofil"
+	{
+		"index"		"1078"
+		"classes"	"weapon_xm1014;"
+	}
+	"Verriegelung"
+	{
+		"index"		"1077"
+		"classes"	"weapon_nova;"
+	}
+	"Rahmenwerk"
+	{
+		"index"		"1076"
+		"classes"	"weapon_cz75a;"
+	}
+	"Strategie"
+	{
+		"index"		"1075"
+		"classes"	"weapon_mac10;"
+	}
+	"Schaltplan"
+	{
+		"index"		"1074"
+		"classes"	"weapon_p90;"
+	}
+	"Unmittelbare Gefahr"
+	{
+		"index"		"1073"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Prismatische Terrasse"
+	{
+		"index"		"1072"
+		"classes"	"weapon_mag7;"
+	}
+	"ACHTUNG!"
+	{
+		"index"		"1071"
+		"classes"	"weapon_galilar;"
+	}
+	"Grün laminiert"
+	{
+		"index"		"1070"
+		"classes"	"weapon_ak47;"
+	}
+	"Gamma Doppler (Phase 4)"
+	{
+		"index"		"1123"
+		"classes"	"weapon_glock;"
+	}
+	"Gamma Doppler (Phase 3)"
+	{
+		"index"		"1122"
+		"classes"	"weapon_glock;"
+	}
+	"Gamma Doppler (Phase 2)"
+	{
+		"index"		"1121"
+		"classes"	"weapon_glock;"
+	}
+	"Gamma Doppler (Phase 1)"
+	{
+		"index"		"1120"
+		"classes"	"weapon_glock;"
+	}
+	"Gamma Doppler (Emerald)"
+	{
+		"index"		"1119"
+		"classes"	"weapon_glock;"
+	}
+	"Propaganda"
+	{
+		"index"		"1067"
+		"classes"	"weapon_mac10;"
+	}
+	"Whiteout"
+	{
+		"index"		"1065"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Syndikat"
+	{
+		"index"		"1064"
+		"classes"	"weapon_cz75a;"
+	}
+	"Koalition"
+	{
+		"index"		"1063"
+		"classes"	"weapon_m4a1;"
+	}
+	"Herbstschal"
+	{
+		"index"		"1061"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Frühlingsschal"
+	{
+		"index"		"1060"
+		"classes"	"weapon_ssg08;"
+	}
+	"Fizzy POP"
+	{
+		"index"		"1059"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"POP AWP"
+	{
+		"index"		"1058"
+		"classes"	"weapon_awp;"
+	}
+	"Sputnik"
+	{
+		"index"		"1056"
+		"classes"	"weapon_deagle;"
+	}
+	"Wettlauf ins All"
+	{
+		"index"		"1055"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Schmelze"
+	{
+		"index"		"1053"
+		"classes"	"weapon_famas;"
+	}
+	"Pusteblume"
 	{
 		"index"		"1051"
 		"classes"	"weapon_nova;"
 	}
-	"Trigger Discipline"
+	"Feuerdisziplin"
 	{
 		"index"		"1050"
 		"classes"	"weapon_deagle;"
 	}
-	"Oscillator"
+	"Oszillator"
 	{
 		"index"		"1049"
 		"classes"	"weapon_ump45;"
 	}
-	"Heavy Metal"
+	"Schwermetall"
 	{
 		"index"		"1048"
 		"classes"	"weapon_sg556;"
 	}
-	"Junk Yard"
+	"Schrottplatz"
 	{
 		"index"		"1047"
 		"classes"	"weapon_revolver;"
@@ -30,12 +360,12 @@
 		"index"		"1046"
 		"classes"	"weapon_xm1014;"
 	}
-	"Button Masher"
+	"Knopfdrücker"
 	{
 		"index"		"1045"
 		"classes"	"weapon_mac10;"
 	}
-	"Cyber Shell"
+	"Cyberschutz"
 	{
 		"index"		"1044"
 		"classes"	"weapon_p250;"
@@ -50,17 +380,17 @@
 		"index"		"1042"
 		"classes"	"weapon_m249;"
 	}
-	"In Living Color"
+	"Farbenpracht"
 	{
 		"index"		"1041"
 		"classes"	"weapon_m4a1;"
 	}
-	"The Traitor"
+	"Der Gehängte"
 	{
 		"index"		"1040"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Clear Polymer"
+	"Transparentes Polymer"
 	{
 		"index"		"1039"
 		"classes"	"weapon_glock;"
@@ -80,7 +410,7 @@
 		"index"		"1036"
 		"classes"	"weapon_cz75a;"
 	}
-	"Slate"
+	"Schiefer"
 	{
 		"index"		"1035"
 		"classes"	"weapon_ak47;"
@@ -554,6 +884,166 @@
 	{
 		"index"		"941"
 		"classes"	"weapon_ak47;"
+	}
+	"Oxidoase"
+	{
+		"index"		"923"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Wüstenblüte"
+	{
+		"index"		"765"
+		"classes"	"weapon_sg556;"
+	}
+	"Wüstenfuchs"
+	{
+		"index"		"764"
+		"classes"	"weapon_deagle;"
+	}
+	"Anolis"
+	{
+		"index"		"829"
+		"classes"	"weapon_bizon;"
+	}
+	"Grasgrünes Wachstum"
+	{
+		"index"		"828"
+		"classes"	"weapon_p90;"
+	}
+	"Luftbefeuchter"
+	{
+		"index"		"827"
+		"classes"	"weapon_m249;"
+	}
+	"Siena-Damast"
+	{
+		"index"		"826"
+		"classes"	"weapon_mac10;"
+	}
+	"Dürre"
+	{
+		"index"		"825"
+		"classes"	"weapon_p250;"
+	}
+	"Treibholz"
+	{
+		"index"		"824"
+		"classes"	"weapon_elite;"
+	}
+	"Sandsturm"
+	{
+		"index"		"823"
+		"classes"	"weapon_aug;"
+	}
+	"Marineglanz"
+	{
+		"index"		"822"
+		"classes"	"weapon_mag7;"
+	}
+	"Elegante Reben"
+	{
+		"index"		"821"
+		"classes"	"weapon_xm1014;"
+	}
+	"Spieluhr"
+	{
+		"index"		"820"
+		"classes"	"weapon_mp9;"
+	}
+	"Wüstenhydra"
+	{
+		"index"		"819"
+		"classes"	"weapon_awp;"
+	}
+	"Violettes DDPAT"
+	{
+		"index"		"818"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Todesstreich"
+	{
+		"index"		"1052"
+		"classes"	"weapon_ssg08;"
+	}
+	"Beute"
+	{
+		"index"		"935"
+		"classes"	"weapon_mp7;weapon_ssg08;"
+	}
+	"Verblichen"
+	{
+		"index"		"934"
+		"classes"	"weapon_sg556;"
+	}
+	"Mitternachtspalme"
+	{
+		"index"		"933"
+		"classes"	"weapon_m249;weapon_cz75a;"
+	}
+	"Verdorrte Ranke"
+	{
+		"index"		"932"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Alte Wurzeln"
+	{
+		"index"		"931"
+		"classes"	"weapon_mp9;"
+	}
+	"Neue Wurzeln"
+	{
+		"index"		"930"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Treibsand"
+	{
+		"index"		"929"
+		"classes"	"weapon_nova;"
+	}
+	"Schwarz & Hellbraun"
+	{
+		"index"		"928"
+		"classes"	"weapon_p250;"
+	}
+	"Gestocktes Holz"
+	{
+		"index"		"927"
+		"classes"	"weapon_aug;"
+	}
+	"Rotes DDPAT"
+	{
+		"index"		"926"
+		"classes"	"weapon_m4a1;"
+	}
+	"Wüsten-DDPAT"
+	{
+		"index"		"925"
+		"classes"	"weapon_p90;"
+	}
+	"Desert Brush"
+	{
+		"index"		"924"
+		"classes"	"weapon_revolver;"
+	}
+	"Orangene Anolis"
+	{
+		"index"		"922"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Gold-Arabeske"
+	{
+		"index"		"921"
+		"classes"	"weapon_ak47;"
+	}
+	"Ausgetrocknet"
+	{
+		"index"		"880"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Farbverlauf"
+	{
+		"index"		"879"
+		"classes"	"weapon_ump45;"
 	}
 	"Gedenkenfeier"
 	{
@@ -1858,7 +2348,7 @@
 	"Freihändig"
 	{
 		"index"		"581"
-		"classes"	"weapon_knife_m9_bayonet;"
+		"classes"	"weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Freihändig"
 	{
@@ -1868,7 +2358,7 @@
 	"Klares Wasser"
 	{
 		"index"		"579"
-		"classes"	"weapon_knife_m9_bayonet;"
+		"classes"	"weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Klares Wasser"
 	{
@@ -1903,27 +2393,27 @@
 	"Gamma Doppler (Phase 4)"
 	{
 		"index"		"572"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Gamma Doppler (Phase 3)"
 	{
 		"index"		"571"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Gamma Doppler (Phase 2)"
 	{
 		"index"		"570"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Gamma Doppler (Phase 1)"
 	{
 		"index"		"569"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Gamma Doppler (Emerald)"
 	{
 		"index"		"568"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Schwarz laminiert"
 	{
@@ -2088,7 +2578,7 @@
 	"Sicherheitsnetz"
 	{
 		"index"		"795"
-		"classes"	"weapon_ak47;"
+		"classes"	"weapon_ak47;weapon_tec9;"
 	}
 	"Kehrmaschine"
 	{
@@ -3673,7 +4163,7 @@
 	"Punkt"
 	{
 		"index"		"250"
-		"classes"	"weapon_sawedoff;weapon_mp7;"
+		"classes"	"weapon_ump45;weapon_sawedoff;weapon_mp7;"
 	}
 	"Kobaltblauer Quarz"
 	{
@@ -3683,7 +4173,7 @@
 	"Roter Quarz"
 	{
 		"index"		"248"
-		"classes"	"weapon_tec9;"
+		"classes"	"weapon_tec9;weapon_nova;"
 	}
 	"Damaszener Stahl"
 	{
@@ -3693,7 +4183,7 @@
 	"Bernsteinfärbung"
 	{
 		"index"		"246"
-		"classes"	"weapon_mac10;weapon_sawedoff;weapon_hkp2000;"
+		"classes"	"weapon_aug;weapon_galilar;weapon_mac10;weapon_sawedoff;weapon_hkp2000;"
 	}
 	"Militäraufklärung"
 	{
@@ -3723,7 +4213,7 @@
 	"CaliCamo"
 	{
 		"index"		"240"
-		"classes"	"weapon_xm1014;weapon_negev;"
+		"classes"	"weapon_famas;weapon_xm1014;weapon_negev;"
 	}
 	"Blaues VariCamo"
 	{
@@ -4268,7 +4758,7 @@
 	"Rosa DDPAT"
 	{
 		"index"		"84"
-		"classes"	"weapon_awp;"
+		"classes"	"weapon_glock;weapon_awp;"
 	}
 	"Orangenes DDPAT"
 	{
@@ -4318,7 +4808,7 @@
 	"Kohlefaser"
 	{
 		"index"		"70"
-		"classes"	"weapon_ump45;weapon_bizon;weapon_mag7;weapon_scar20;"
+		"classes"	"weapon_ump45;weapon_bizon;weapon_mag7;weapon_scar20;weapon_ssg08;"
 	}
 	"Kaltblütig"
 	{
@@ -4368,7 +4858,7 @@
 	"Einsatzgehärtet"
 	{
 		"index"		"44"
-		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
+		"classes"	"weapon_fiveseven;weapon_ak47;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Gefleckt"
 	{
@@ -4403,7 +4893,7 @@
 	"Großbrand"
 	{
 		"index"		"37"
-		"classes"	"weapon_deagle;weapon_ump45;"
+		"classes"	"weapon_deagle;weapon_ump45;weapon_revolver;"
 	}
 	"Verknöchert"
 	{
