--- a/addons/sourcemod/configs/weapons/weapons_latam.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_latam.cfg
@@ -1,5 +1,335 @@
 "Skins"
 {
+	"Perro guardián"
+	{
+		"index"		"1103"
+		"classes"	"weapon_xm1014;"
+	}
+	"Loto negro"
+	{
+		"index"		"1102"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Turbo Peek"
+	{
+		"index"		"1101"
+		"classes"	"weapon_ssg08;"
+	}
+	"Snack Attack"
+	{
+		"index"		"1100"
+		"classes"	"weapon_glock;"
+	}
+	"Lumen"
+	{
+		"index"		"1099"
+		"classes"	"weapon_bizon;"
+	}
+	"Caja de juguetes"
+	{
+		"index"		"1098"
+		"classes"	"weapon_mac10;"
+	}
+	"Spider Lily"
+	{
+		"index"		"1097"
+		"classes"	"weapon_m4a1;"
+	}
+	"Guerrilla"
+	{
+		"index"		"1096"
+		"classes"	"weapon_mp7;"
+	}
+	"Llevando las cuentas"
+	{
+		"index"		"1095"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Monte Fuji"
+	{
+		"index"		"1094"
+		"classes"	"weapon_mp9;"
+	}
+	"Protocolo de impulso"
+	{
+		"index"		"1093"
+		"classes"	"weapon_fiveseven;"
+	}
+	"ZX Spectron"
+	{
+		"index"		"1092"
+		"classes"	"weapon_famas;"
+	}
+	"Hilo"
+	{
+		"index"		"1091"
+		"classes"	"weapon_elite;"
+	}
+	"Ocean Drive"
+	{
+		"index"		"1090"
+		"classes"	"weapon_deagle;"
+	}
+	"BI83 Spectrum"
+	{
+		"index"		"1089"
+		"classes"	"weapon_mag7;"
+	}
+	"Plague"
+	{
+		"index"		"1088"
+		"classes"	"weapon_aug;"
+	}
+	"Leet museo"
+	{
+		"index"		"1087"
+		"classes"	"weapon_ak47;"
+	}
+	"Autotrónico"
+	{
+		"index"		"1118"
+		"classes"	"weapon_knife_push;"
+	}
+	"Autotrónico"
+	{
+		"index"		"1117"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"Autotrónico"
+	{
+		"index"		"1116"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"Autotrónico"
+	{
+		"index"		"1115"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"Autotrónico"
+	{
+		"index"		"1114"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"Laminado Negro"
+	{
+		"index"		"1113"
+		"classes"	"weapon_knife_push;"
+	}
+	"Laminado Negro"
+	{
+		"index"		"1112"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"Laminado Negro"
+	{
+		"index"		"1111"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"Laminado Negro"
+	{
+		"index"		"1110"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"Laminado Negro"
+	{
+		"index"		"1109"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"Tradicional"
+	{
+		"index"		"1108"
+		"classes"	"weapon_knife_push;"
+	}
+	"Tradicional"
+	{
+		"index"		"1107"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"Tradicional"
+	{
+		"index"		"1106"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"Tradicional"
+	{
+		"index"		"1105"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"Tradicional"
+	{
+		"index"		"1104"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"Cableado defectuoso"
+	{
+		"index"		"1066"
+		"classes"	"weapon_famas;"
+	}
+	"Cambio de aceite"
+	{
+		"index"		"1086"
+		"classes"	"weapon_elite;"
+	}
+	"Mecanismo"
+	{
+		"index"		"1085"
+		"classes"	"weapon_ump45;"
+	}
+	"Pago peligroso"
+	{
+		"index"		"1084"
+		"classes"	"weapon_sg556;"
+	}
+	"Breaker Box"
+	{
+		"index"		"1083"
+		"classes"	"weapon_bizon;"
+	}
+	"Peligro de caída"
+	{
+		"index"		"1082"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Arquitecto digital"
+	{
+		"index"		"1081"
+		"classes"	"weapon_p250;"
+	}
+	"Infraestructura"
+	{
+		"index"		"1080"
+		"classes"	"weapon_negev;"
+	}
+	"Huellas de llantas"
+	{
+		"index"		"1079"
+		"classes"	"weapon_glock;"
+	}
+	"Marca de llantas"
+	{
+		"index"		"1078"
+		"classes"	"weapon_xm1014;"
+	}
+	"Entrelazar"
+	{
+		"index"		"1077"
+		"classes"	"weapon_nova;"
+	}
+	"Marco"
+	{
+		"index"		"1076"
+		"classes"	"weapon_cz75a;"
+	}
+	"Estrategias"
+	{
+		"index"		"1075"
+		"classes"	"weapon_mac10;"
+	}
+	"Esquemas"
+	{
+		"index"		"1074"
+		"classes"	"weapon_p90;"
+	}
+	"Peligro inminente"
+	{
+		"index"		"1073"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Terraza de prismas"
+	{
+		"index"		"1072"
+		"classes"	"weapon_mag7;"
+	}
+	"¡PRECAUCIÓN!"
+	{
+		"index"		"1071"
+		"classes"	"weapon_galilar;"
+	}
+	"Laminado verde"
+	{
+		"index"		"1070"
+		"classes"	"weapon_ak47;"
+	}
+	"Doppler gamma (Phase 4)"
+	{
+		"index"		"1123"
+		"classes"	"weapon_glock;"
+	}
+	"Doppler gamma (Phase 3)"
+	{
+		"index"		"1122"
+		"classes"	"weapon_glock;"
+	}
+	"Doppler gamma (Phase 2)"
+	{
+		"index"		"1121"
+		"classes"	"weapon_glock;"
+	}
+	"Doppler gamma (Phase 1)"
+	{
+		"index"		"1120"
+		"classes"	"weapon_glock;"
+	}
+	"Doppler gamma (Emerald)"
+	{
+		"index"		"1119"
+		"classes"	"weapon_glock;"
+	}
+	"Propaganda"
+	{
+		"index"		"1067"
+		"classes"	"weapon_mac10;"
+	}
+	"Níveo"
+	{
+		"index"		"1065"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Sindicato"
+	{
+		"index"		"1064"
+		"classes"	"weapon_cz75a;"
+	}
+	"La Coalición"
+	{
+		"index"		"1063"
+		"classes"	"weapon_m4a1;"
+	}
+	"Sarga otoñal"
+	{
+		"index"		"1061"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Sarga primaveral"
+	{
+		"index"		"1060"
+		"classes"	"weapon_ssg08;"
+	}
+	"POP efervescente"
+	{
+		"index"		"1059"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"POP AWP"
+	{
+		"index"		"1058"
+		"classes"	"weapon_awp;"
+	}
+	"Sputnik"
+	{
+		"index"		"1056"
+		"classes"	"weapon_deagle;"
+	}
+	"Carrera espacial"
+	{
+		"index"		"1055"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Meltdown"
+	{
+		"index"		"1053"
+		"classes"	"weapon_famas;"
+	}
 	"Viento"
 	{
 		"index"		"1051"
@@ -554,6 +884,166 @@
 	{
 		"index"		"941"
 		"classes"	"weapon_ak47;"
+	}
+	"Óxido de oasis"
+	{
+		"index"		"923"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Flor del desierto"
+	{
+		"index"		"765"
+		"classes"	"weapon_sg556;"
+	}
+	"Zorro del desierto"
+	{
+		"index"		"764"
+		"classes"	"weapon_deagle;"
+	}
+	"Anolis"
+	{
+		"index"		"829"
+		"classes"	"weapon_bizon;"
+	}
+	"Verdant Growth"
+	{
+		"index"		"828"
+		"classes"	"weapon_p90;"
+	}
+	"Humidificador"
+	{
+		"index"		"827"
+		"classes"	"weapon_m249;"
+	}
+	"Damasco ocre"
+	{
+		"index"		"826"
+		"classes"	"weapon_mac10;"
+	}
+	"Sequía"
+	{
+		"index"		"825"
+		"classes"	"weapon_p250;"
+	}
+	"Madera flotante"
+	{
+		"index"		"824"
+		"classes"	"weapon_elite;"
+	}
+	"Sand Storm"
+	{
+		"index"		"823"
+		"classes"	"weapon_aug;"
+	}
+	"Navy Sheen"
+	{
+		"index"		"822"
+		"classes"	"weapon_mag7;"
+	}
+	"Vides elegantes"
+	{
+		"index"		"821"
+		"classes"	"weapon_xm1014;"
+	}
+	"Caja de música"
+	{
+		"index"		"820"
+		"classes"	"weapon_mp9;"
+	}
+	"Desert Hydra"
+	{
+		"index"		"819"
+		"classes"	"weapon_awp;"
+	}
+	"Purple DDPAT"
+	{
+		"index"		"818"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Death Strike"
+	{
+		"index"		"1052"
+		"classes"	"weapon_ssg08;"
+	}
+	"Presa"
+	{
+		"index"		"935"
+		"classes"	"weapon_mp7;weapon_ssg08;"
+	}
+	"Blanqueado"
+	{
+		"index"		"934"
+		"classes"	"weapon_sg556;"
+	}
+	"Palmera de medianoche"
+	{
+		"index"		"933"
+		"classes"	"weapon_m249;weapon_cz75a;"
+	}
+	"Vid marchita"
+	{
+		"index"		"932"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Raíces viejas"
+	{
+		"index"		"931"
+		"classes"	"weapon_mp9;"
+	}
+	"Raíces nuevas"
+	{
+		"index"		"930"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Quick Sand"
+	{
+		"index"		"929"
+		"classes"	"weapon_nova;"
+	}
+	"Negro y bronce"
+	{
+		"index"		"928"
+		"classes"	"weapon_p250;"
+	}
+	"Madera descolorida"
+	{
+		"index"		"927"
+		"classes"	"weapon_aug;"
+	}
+	"DDPAT rojo"
+	{
+		"index"		"926"
+		"classes"	"weapon_m4a1;"
+	}
+	"DDPAT del desierto"
+	{
+		"index"		"925"
+		"classes"	"weapon_p90;"
+	}
+	"Arbustos desérticos"
+	{
+		"index"		"924"
+		"classes"	"weapon_revolver;"
+	}
+	"Anolis naranja"
+	{
+		"index"		"922"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Arabesco dorado"
+	{
+		"index"		"921"
+		"classes"	"weapon_ak47;"
+	}
+	"Parchado"
+	{
+		"index"		"880"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Desteñido"
+	{
+		"index"		"879"
+		"classes"	"weapon_ump45;"
 	}
 	"Commemoration"
 	{
@@ -1858,7 +2348,7 @@
 	"Mano alzada"
 	{
 		"index"		"581"
-		"classes"	"weapon_knife_m9_bayonet;"
+		"classes"	"weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Mano alzada"
 	{
@@ -1868,7 +2358,7 @@
 	"Aguas brillantes"
 	{
 		"index"		"579"
-		"classes"	"weapon_knife_m9_bayonet;"
+		"classes"	"weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Aguas brillantes"
 	{
@@ -1903,27 +2393,27 @@
 	"Doppler gamma (Phase 4)"
 	{
 		"index"		"572"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Doppler gamma (Phase 3)"
 	{
 		"index"		"571"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Doppler gamma (Phase 2)"
 	{
 		"index"		"570"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Doppler gamma (Phase 1)"
 	{
 		"index"		"569"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Doppler gamma (Emerald)"
 	{
 		"index"		"568"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Laminado Negro"
 	{
@@ -2088,7 +2578,7 @@
 	"Red de seguridad"
 	{
 		"index"		"795"
-		"classes"	"weapon_ak47;"
+		"classes"	"weapon_ak47;weapon_tec9;"
 	}
 	"Barredor"
 	{
@@ -3673,7 +4163,7 @@
 	"Arresto total"
 	{
 		"index"		"250"
-		"classes"	"weapon_sawedoff;weapon_mp7;"
+		"classes"	"weapon_ump45;weapon_sawedoff;weapon_mp7;"
 	}
 	"Cuarzo cobalto"
 	{
@@ -3683,7 +4173,7 @@
 	"Cuarzo rojo"
 	{
 		"index"		"248"
-		"classes"	"weapon_tec9;"
+		"classes"	"weapon_tec9;weapon_nova;"
 	}
 	"Acero de damasco"
 	{
@@ -3693,7 +4183,7 @@
 	"Ámbar desteñido"
 	{
 		"index"		"246"
-		"classes"	"weapon_mac10;weapon_sawedoff;weapon_hkp2000;"
+		"classes"	"weapon_aug;weapon_galilar;weapon_mac10;weapon_sawedoff;weapon_hkp2000;"
 	}
 	"Camuflaje Militar"
 	{
@@ -3723,7 +4213,7 @@
 	"Camuflaje desértico"
 	{
 		"index"		"240"
-		"classes"	"weapon_xm1014;weapon_negev;"
+		"classes"	"weapon_famas;weapon_xm1014;weapon_negev;"
 	}
 	"Camuflaje variado azul"
 	{
@@ -4268,7 +4758,7 @@
 	"DDPAT rosa"
 	{
 		"index"		"84"
-		"classes"	"weapon_awp;"
+		"classes"	"weapon_glock;weapon_awp;"
 	}
 	"DDPAT naranja"
 	{
@@ -4318,7 +4808,7 @@
 	"Fibra de carbono"
 	{
 		"index"		"70"
-		"classes"	"weapon_ump45;weapon_bizon;weapon_mag7;weapon_scar20;"
+		"classes"	"weapon_ump45;weapon_bizon;weapon_mag7;weapon_scar20;weapon_ssg08;"
 	}
 	"Sangre fría"
 	{
@@ -4368,7 +4858,7 @@
 	"Acero templado"
 	{
 		"index"		"44"
-		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
+		"classes"	"weapon_fiveseven;weapon_ak47;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Manchado"
 	{
@@ -4403,7 +4893,7 @@
 	"Llamarada"
 	{
 		"index"		"37"
-		"classes"	"weapon_deagle;weapon_ump45;"
+		"classes"	"weapon_deagle;weapon_ump45;weapon_revolver;"
 	}
 	"Osificado"
 	{
