--- a/addons/sourcemod/configs/weapons/weapons_polish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_polish.cfg
@@ -1,5 +1,335 @@
 "Skins"
 {
+	"Czuwający"
+	{
+		"index"		"1103"
+		"classes"	"weapon_xm1014;"
+	}
+	"Czarny lotos"
+	{
+		"index"		"1102"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Tryb turbo"
+	{
+		"index"		"1101"
+		"classes"	"weapon_ssg08;"
+	}
+	"Atak smakołyków"
+	{
+		"index"		"1100"
+		"classes"	"weapon_glock;"
+	}
+	"Lumen"
+	{
+		"index"		"1099"
+		"classes"	"weapon_bizon;"
+	}
+	"Pudełko zabawek"
+	{
+		"index"		"1098"
+		"classes"	"weapon_mac10;"
+	}
+	"Lycoris"
+	{
+		"index"		"1097"
+		"classes"	"weapon_m4a1;"
+	}
+	"Partyzantka"
+	{
+		"index"		"1096"
+		"classes"	"weapon_mp7;"
+	}
+	"Na oku"
+	{
+		"index"		"1095"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Góra Fudżi"
+	{
+		"index"		"1094"
+		"classes"	"weapon_mp9;"
+	}
+	"Protokół wzmocnienia"
+	{
+		"index"		"1093"
+		"classes"	"weapon_fiveseven;"
+	}
+	"ZX Spectron"
+	{
+		"index"		"1092"
+		"classes"	"weapon_famas;"
+	}
+	"Odciśnięcie"
+	{
+		"index"		"1091"
+		"classes"	"weapon_elite;"
+	}
+	"Nadmorska ulica"
+	{
+		"index"		"1090"
+		"classes"	"weapon_deagle;"
+	}
+	"BI83 Spectrum"
+	{
+		"index"		"1089"
+		"classes"	"weapon_mag7;"
+	}
+	"Plaga"
+	{
+		"index"		"1088"
+		"classes"	"weapon_aug;"
+	}
+	"Leet museo"
+	{
+		"index"		"1087"
+		"classes"	"weapon_ak47;"
+	}
+	"Autotronika"
+	{
+		"index"		"1118"
+		"classes"	"weapon_knife_push;"
+	}
+	"Autotronika"
+	{
+		"index"		"1117"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"Autotronika"
+	{
+		"index"		"1116"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"Autotronika"
+	{
+		"index"		"1115"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"Autotronika"
+	{
+		"index"		"1114"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"Czarny laminat"
+	{
+		"index"		"1113"
+		"classes"	"weapon_knife_push;"
+	}
+	"Czarny laminat"
+	{
+		"index"		"1112"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"Czarny laminat"
+	{
+		"index"		"1111"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"Czarny laminat"
+	{
+		"index"		"1110"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"Czarny laminat"
+	{
+		"index"		"1109"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"Wiedza"
+	{
+		"index"		"1108"
+		"classes"	"weapon_knife_push;"
+	}
+	"Wiedza"
+	{
+		"index"		"1107"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"Wiedza"
+	{
+		"index"		"1106"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"Wiedza"
+	{
+		"index"		"1105"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"Wiedza"
+	{
+		"index"		"1104"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"Wadliwe okablowanie"
+	{
+		"index"		"1066"
+		"classes"	"weapon_famas;"
+	}
+	"Zmiana oleju"
+	{
+		"index"		"1086"
+		"classes"	"weapon_elite;"
+	}
+	"Mechanizm"
+	{
+		"index"		"1085"
+		"classes"	"weapon_ump45;"
+	}
+	"Niebezpieczne warunki"
+	{
+		"index"		"1084"
+		"classes"	"weapon_sg556;"
+	}
+	"Skrzynka na bezpieczniki"
+	{
+		"index"		"1083"
+		"classes"	"weapon_bizon;"
+	}
+	"Zagrożenie upadkiem"
+	{
+		"index"		"1082"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Cyfrowy architekt"
+	{
+		"index"		"1081"
+		"classes"	"weapon_p250;"
+	}
+	"Infrastruktura"
+	{
+		"index"		"1080"
+		"classes"	"weapon_negev;"
+	}
+	"Opony wyścigowe"
+	{
+		"index"		"1079"
+		"classes"	"weapon_glock;"
+	}
+	"Bieżnik"
+	{
+		"index"		"1078"
+		"classes"	"weapon_xm1014;"
+	}
+	"Przeplot"
+	{
+		"index"		"1077"
+		"classes"	"weapon_nova;"
+	}
+	"Struktura"
+	{
+		"index"		"1076"
+		"classes"	"weapon_cz75a;"
+	}
+	"Strategie"
+	{
+		"index"		"1075"
+		"classes"	"weapon_mac10;"
+	}
+	"Schematyczny"
+	{
+		"index"		"1074"
+		"classes"	"weapon_p90;"
+	}
+	"Bliskie niebezpieczeństwo"
+	{
+		"index"		"1073"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Pryzmatyczne schodki"
+	{
+		"index"		"1072"
+		"classes"	"weapon_mag7;"
+	}
+	"UWAGA!"
+	{
+		"index"		"1071"
+		"classes"	"weapon_galilar;"
+	}
+	"Zielony laminat"
+	{
+		"index"		"1070"
+		"classes"	"weapon_ak47;"
+	}
+	"Gamma Doppler (Phase 4)"
+	{
+		"index"		"1123"
+		"classes"	"weapon_glock;"
+	}
+	"Gamma Doppler (Phase 3)"
+	{
+		"index"		"1122"
+		"classes"	"weapon_glock;"
+	}
+	"Gamma Doppler (Phase 2)"
+	{
+		"index"		"1121"
+		"classes"	"weapon_glock;"
+	}
+	"Gamma Doppler (Phase 1)"
+	{
+		"index"		"1120"
+		"classes"	"weapon_glock;"
+	}
+	"Gamma Doppler (Emerald)"
+	{
+		"index"		"1119"
+		"classes"	"weapon_glock;"
+	}
+	"Propaganda"
+	{
+		"index"		"1067"
+		"classes"	"weapon_mac10;"
+	}
+	"Wybielenie"
+	{
+		"index"		"1065"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Syndykat"
+	{
+		"index"		"1064"
+		"classes"	"weapon_cz75a;"
+	}
+	"Koalicja"
+	{
+		"index"		"1063"
+		"classes"	"weapon_m4a1;"
+	}
+	"Jesienny szal"
+	{
+		"index"		"1061"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Wiosenny szal"
+	{
+		"index"		"1060"
+		"classes"	"weapon_ssg08;"
+	}
+	"Napój gazowany"
+	{
+		"index"		"1059"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Wyskakująca spluwa"
+	{
+		"index"		"1058"
+		"classes"	"weapon_awp;"
+	}
+	"Sputnik"
+	{
+		"index"		"1056"
+		"classes"	"weapon_deagle;"
+	}
+	"Kosmiczny wyścig"
+	{
+		"index"		"1055"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Topnienie"
+	{
+		"index"		"1053"
+		"classes"	"weapon_famas;"
+	}
 	"Niesiony przez wiatr"
 	{
 		"index"		"1051"
@@ -554,6 +884,166 @@
 	{
 		"index"		"941"
 		"classes"	"weapon_ak47;"
+	}
+	"Tlenkowa oaza"
+	{
+		"index"		"923"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Pustynny rozkwit"
+	{
+		"index"		"765"
+		"classes"	"weapon_sg556;"
+	}
+	"Fenek pustynny"
+	{
+		"index"		"764"
+		"classes"	"weapon_deagle;"
+	}
+	"Anolis"
+	{
+		"index"		"829"
+		"classes"	"weapon_bizon;"
+	}
+	"Bujny wzrost"
+	{
+		"index"		"828"
+		"classes"	"weapon_p90;"
+	}
+	"Humidor"
+	{
+		"index"		"827"
+		"classes"	"weapon_m249;"
+	}
+	"Ochrowy adamaszek"
+	{
+		"index"		"826"
+		"classes"	"weapon_mac10;"
+	}
+	"Susza"
+	{
+		"index"		"825"
+		"classes"	"weapon_p250;"
+	}
+	"Dryfujące drewno"
+	{
+		"index"		"824"
+		"classes"	"weapon_elite;"
+	}
+	"Burza piaskowa"
+	{
+		"index"		"823"
+		"classes"	"weapon_aug;"
+	}
+	"Morski połysk"
+	{
+		"index"		"822"
+		"classes"	"weapon_mag7;"
+	}
+	"Elegancka winorośl"
+	{
+		"index"		"821"
+		"classes"	"weapon_xm1014;"
+	}
+	"Pozytywka"
+	{
+		"index"		"820"
+		"classes"	"weapon_mp9;"
+	}
+	"Pustynna hydra"
+	{
+		"index"		"819"
+		"classes"	"weapon_awp;"
+	}
+	"Fioletowy DDPAT"
+	{
+		"index"		"818"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Śmiertelny atak"
+	{
+		"index"		"1052"
+		"classes"	"weapon_ssg08;"
+	}
+	"Zwierzyna"
+	{
+		"index"		"935"
+		"classes"	"weapon_mp7;weapon_ssg08;"
+	}
+	"Wybielony"
+	{
+		"index"		"934"
+		"classes"	"weapon_sg556;"
+	}
+	"Palma północy"
+	{
+		"index"		"933"
+		"classes"	"weapon_m249;weapon_cz75a;"
+	}
+	"Zwiędła winorośl"
+	{
+		"index"		"932"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Stare korzenie"
+	{
+		"index"		"931"
+		"classes"	"weapon_mp9;"
+	}
+	"Nowe korzenie"
+	{
+		"index"		"930"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Ruchome piaski"
+	{
+		"index"		"929"
+		"classes"	"weapon_nova;"
+	}
+	"Czerń i jasny brąz"
+	{
+		"index"		"928"
+		"classes"	"weapon_p250;"
+	}
+	"Obumierające drewno"
+	{
+		"index"		"927"
+		"classes"	"weapon_aug;"
+	}
+	"Czerwony DDPAT"
+	{
+		"index"		"926"
+		"classes"	"weapon_m4a1;"
+	}
+	"Pustynny DDPAT"
+	{
+		"index"		"925"
+		"classes"	"weapon_p90;"
+	}
+	"Pustynne pociągnięcia"
+	{
+		"index"		"924"
+		"classes"	"weapon_revolver;"
+	}
+	"Anolis pomarańczowy"
+	{
+		"index"		"922"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Złota arabeska"
+	{
+		"index"		"921"
+		"classes"	"weapon_ak47;"
+	}
+	"Wysuszony"
+	{
+		"index"		"880"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Gradient"
+	{
+		"index"		"879"
+		"classes"	"weapon_ump45;"
 	}
 	"Upamiętnienie"
 	{
@@ -1858,7 +2348,7 @@
 	"Rękodzieło"
 	{
 		"index"		"581"
-		"classes"	"weapon_knife_m9_bayonet;"
+		"classes"	"weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Rękodzieło"
 	{
@@ -1868,7 +2358,7 @@
 	"Jasne wody"
 	{
 		"index"		"579"
-		"classes"	"weapon_knife_m9_bayonet;"
+		"classes"	"weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Jasne wody"
 	{
@@ -1900,30 +2390,30 @@
 		"index"		"573"
 		"classes"	"weapon_bayonet;"
 	}
-	"Gamma doppler (Phase 4)"
+	"Gamma Doppler (Phase 4)"
 	{
 		"index"		"572"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
-	"Gamma doppler (Phase 3)"
+	"Gamma Doppler (Phase 3)"
 	{
 		"index"		"571"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
-	"Gamma doppler (Phase 2)"
+	"Gamma Doppler (Phase 2)"
 	{
 		"index"		"570"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
-	"Gamma doppler (Phase 1)"
+	"Gamma Doppler (Phase 1)"
 	{
 		"index"		"569"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
-	"Gamma doppler (Emerald)"
+	"Gamma Doppler (Emerald)"
 	{
 		"index"		"568"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Czarny laminat"
 	{
@@ -2088,7 +2578,7 @@
 	"Siatka bezpieczeństwa"
 	{
 		"index"		"795"
-		"classes"	"weapon_ak47;"
+		"classes"	"weapon_ak47;weapon_tec9;"
 	}
 	"Zamiatacz"
 	{
@@ -3673,7 +4163,7 @@
 	"Kropka"
 	{
 		"index"		"250"
-		"classes"	"weapon_sawedoff;weapon_mp7;"
+		"classes"	"weapon_ump45;weapon_sawedoff;weapon_mp7;"
 	}
 	"Kobaltowy kwarc"
 	{
@@ -3683,7 +4173,7 @@
 	"Czerwony kwarc"
 	{
 		"index"		"248"
-		"classes"	"weapon_tec9;"
+		"classes"	"weapon_tec9;weapon_nova;"
 	}
 	"Stal damasceńska"
 	{
@@ -3693,7 +4183,7 @@
 	"Spłowiały bursztyn"
 	{
 		"index"		"246"
-		"classes"	"weapon_mac10;weapon_sawedoff;weapon_hkp2000;"
+		"classes"	"weapon_aug;weapon_galilar;weapon_mac10;weapon_sawedoff;weapon_hkp2000;"
 	}
 	"Zwiad"
 	{
@@ -3723,7 +4213,7 @@
 	"CaliCamo"
 	{
 		"index"		"240"
-		"classes"	"weapon_xm1014;weapon_negev;"
+		"classes"	"weapon_famas;weapon_xm1014;weapon_negev;"
 	}
 	"Niebieskie VariCamo"
 	{
@@ -4268,7 +4758,7 @@
 	"Różowy DDPAT"
 	{
 		"index"		"84"
-		"classes"	"weapon_awp;"
+		"classes"	"weapon_glock;weapon_awp;"
 	}
 	"Pomarańczowy DDPAT"
 	{
@@ -4318,7 +4808,7 @@
 	"Włókno węglowe"
 	{
 		"index"		"70"
-		"classes"	"weapon_ump45;weapon_bizon;weapon_mag7;weapon_scar20;"
+		"classes"	"weapon_ump45;weapon_bizon;weapon_mag7;weapon_scar20;weapon_ssg08;"
 	}
 	"Zimnokrwisty"
 	{
@@ -4368,7 +4858,7 @@
 	"Stal nawęglana"
 	{
 		"index"		"44"
-		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
+		"classes"	"weapon_fiveseven;weapon_ak47;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Śniedź"
 	{
@@ -4403,7 +4893,7 @@
 	"Żar"
 	{
 		"index"		"37"
-		"classes"	"weapon_deagle;weapon_ump45;"
+		"classes"	"weapon_deagle;weapon_ump45;weapon_revolver;"
 	}
 	"Skostniały"
 	{
