--- a/addons/sourcemod/configs/weapons/weapons_russian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_russian.cfg
@@ -1,5 +1,335 @@
 "Skins"
 {
+	"Настороже"
+	{
+		"index"		"1103"
+		"classes"	"weapon_xm1014;"
+	}
+	"Чёрный лотос"
+	{
+		"index"		"1102"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Турбовыпад"
+	{
+		"index"		"1101"
+		"classes"	"weapon_ssg08;"
+	}
+	"Нападение жора"
+	{
+		"index"		"1100"
+		"classes"	"weapon_glock;"
+	}
+	"Люмен"
+	{
+		"index"		"1099"
+		"classes"	"weapon_bizon;"
+	}
+	"Коробка с игрушками"
+	{
+		"index"		"1098"
+		"classes"	"weapon_mac10;"
+	}
+	"Ликорис лучистый"
+	{
+		"index"		"1097"
+		"classes"	"weapon_m4a1;"
+	}
+	"Партизан"
+	{
+		"index"		"1096"
+		"classes"	"weapon_mp7;"
+	}
+	"Наблюдение"
+	{
+		"index"		"1095"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Фудзияма"
+	{
+		"index"		"1094"
+		"classes"	"weapon_mp9;"
+	}
+	"Протокол «Подъём»"
+	{
+		"index"		"1093"
+		"classes"	"weapon_fiveseven;"
+	}
+	"ZX Spectron"
+	{
+		"index"		"1092"
+		"classes"	"weapon_famas;"
+	}
+	"Tread"
+	{
+		"index"		"1091"
+		"classes"	"weapon_elite;"
+	}
+	"Океанское побережье"
+	{
+		"index"		"1090"
+		"classes"	"weapon_deagle;"
+	}
+	"Висмутовый спектр"
+	{
+		"index"		"1089"
+		"classes"	"weapon_mag7;"
+	}
+	"Чума"
+	{
+		"index"		"1088"
+		"classes"	"weapon_aug;"
+	}
+	"Музей элиты"
+	{
+		"index"		"1087"
+		"classes"	"weapon_ak47;"
+	}
+	"Автотроника"
+	{
+		"index"		"1118"
+		"classes"	"weapon_knife_push;"
+	}
+	"Автотроника"
+	{
+		"index"		"1117"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"Автотроника"
+	{
+		"index"		"1116"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"Автотроника"
+	{
+		"index"		"1115"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"Автотроника"
+	{
+		"index"		"1114"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"Черный глянец"
+	{
+		"index"		"1113"
+		"classes"	"weapon_knife_push;"
+	}
+	"Черный глянец"
+	{
+		"index"		"1112"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"Черный глянец"
+	{
+		"index"		"1111"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"Черный глянец"
+	{
+		"index"		"1110"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"Черный глянец"
+	{
+		"index"		"1109"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"Легенды"
+	{
+		"index"		"1108"
+		"classes"	"weapon_knife_push;"
+	}
+	"Легенды"
+	{
+		"index"		"1107"
+		"classes"	"weapon_knife_tactical;"
+	}
+	"Легенды"
+	{
+		"index"		"1106"
+		"classes"	"weapon_knife_falchion;"
+	}
+	"Легенды"
+	{
+		"index"		"1105"
+		"classes"	"weapon_knife_butterfly;"
+	}
+	"Легенды"
+	{
+		"index"		"1104"
+		"classes"	"weapon_knife_survival_bowie;"
+	}
+	"Дефект проводки"
+	{
+		"index"		"1066"
+		"classes"	"weapon_famas;"
+	}
+	"Замена масла"
+	{
+		"index"		"1086"
+		"classes"	"weapon_elite;"
+	}
+	"Механизм"
+	{
+		"index"		"1085"
+		"classes"	"weapon_ump45;"
+	}
+	"Плата за риск"
+	{
+		"index"		"1084"
+		"classes"	"weapon_sg556;"
+	}
+	"Электрощиток"
+	{
+		"index"		"1083"
+		"classes"	"weapon_bizon;"
+	}
+	"Береги голову"
+	{
+		"index"		"1082"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Цифровой архитектор"
+	{
+		"index"		"1081"
+		"classes"	"weapon_p250;"
+	}
+	"Инфраструктура"
+	{
+		"index"		"1080"
+		"classes"	"weapon_negev;"
+	}
+	"Следящие шины"
+	{
+		"index"		"1079"
+		"classes"	"weapon_glock;"
+	}
+	"Шинные следы"
+	{
+		"index"		"1078"
+		"classes"	"weapon_xm1014;"
+	}
+	"Узел"
+	{
+		"index"		"1077"
+		"classes"	"weapon_nova;"
+	}
+	"Фреймворк"
+	{
+		"index"		"1076"
+		"classes"	"weapon_cz75a;"
+	}
+	"Тактика"
+	{
+		"index"		"1075"
+		"classes"	"weapon_mac10;"
+	}
+	"Схематика"
+	{
+		"index"		"1074"
+		"classes"	"weapon_p90;"
+	}
+	"Неотвратимая угроза"
+	{
+		"index"		"1073"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Призменная терраса"
+	{
+		"index"		"1072"
+		"classes"	"weapon_mag7;"
+	}
+	"ОСТОРОЖНО!"
+	{
+		"index"		"1071"
+		"classes"	"weapon_galilar;"
+	}
+	"Зелёный глянец"
+	{
+		"index"		"1070"
+		"classes"	"weapon_ak47;"
+	}
+	"Гамма-волны (Phase 4)"
+	{
+		"index"		"1123"
+		"classes"	"weapon_glock;"
+	}
+	"Гамма-волны (Phase 3)"
+	{
+		"index"		"1122"
+		"classes"	"weapon_glock;"
+	}
+	"Гамма-волны (Phase 2)"
+	{
+		"index"		"1121"
+		"classes"	"weapon_glock;"
+	}
+	"Гамма-волны (Phase 1)"
+	{
+		"index"		"1120"
+		"classes"	"weapon_glock;"
+	}
+	"Гамма-волны (Emerald)"
+	{
+		"index"		"1119"
+		"classes"	"weapon_glock;"
+	}
+	"Пропаганда"
+	{
+		"index"		"1067"
+		"classes"	"weapon_mac10;"
+	}
+	"Снежная мгла"
+	{
+		"index"		"1065"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Синдикат"
+	{
+		"index"		"1064"
+		"classes"	"weapon_cz75a;"
+	}
+	"Коалиция"
+	{
+		"index"		"1063"
+		"classes"	"weapon_m4a1;"
+	}
+	"Осенний фасон"
+	{
+		"index"		"1061"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Весенний фасон"
+	{
+		"index"		"1060"
+		"classes"	"weapon_ssg08;"
+	}
+	"Fizzy POP"
+	{
+		"index"		"1059"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"POP AWP"
+	{
+		"index"		"1058"
+		"classes"	"weapon_awp;"
+	}
+	"Спутник"
+	{
+		"index"		"1056"
+		"classes"	"weapon_deagle;"
+	}
+	"Космическая гонка"
+	{
+		"index"		"1055"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Авария"
+	{
+		"index"		"1053"
+		"classes"	"weapon_famas;"
+	}
 	"На крыльях ветра"
 	{
 		"index"		"1051"
@@ -554,6 +884,166 @@
 	{
 		"index"		"941"
 		"classes"	"weapon_ak47;"
+	}
+	"Оксидовый оазис"
+	{
+		"index"		"923"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Пустынное цветение"
+	{
+		"index"		"765"
+		"classes"	"weapon_sg556;"
+	}
+	"Фенек"
+	{
+		"index"		"764"
+		"classes"	"weapon_deagle;"
+	}
+	"Анолис"
+	{
+		"index"		"829"
+		"classes"	"weapon_bizon;"
+	}
+	"Буйная растительность"
+	{
+		"index"		"828"
+		"classes"	"weapon_p90;"
+	}
+	"Хьюмидор"
+	{
+		"index"		"827"
+		"classes"	"weapon_m249;"
+	}
+	"Дамасская охра"
+	{
+		"index"		"826"
+		"classes"	"weapon_mac10;"
+	}
+	"Безводье"
+	{
+		"index"		"825"
+		"classes"	"weapon_p250;"
+	}
+	"Сплавной лес"
+	{
+		"index"		"824"
+		"classes"	"weapon_elite;"
+	}
+	"Песчаная буря"
+	{
+		"index"		"823"
+		"classes"	"weapon_aug;"
+	}
+	"Флотский блеск"
+	{
+		"index"		"822"
+		"classes"	"weapon_mag7;"
+	}
+	"Элегантные лозы"
+	{
+		"index"		"821"
+		"classes"	"weapon_xm1014;"
+	}
+	"Музыкальная шкатулка"
+	{
+		"index"		"820"
+		"classes"	"weapon_mp9;"
+	}
+	"Пустынная гидра"
+	{
+		"index"		"819"
+		"classes"	"weapon_awp;"
+	}
+	"Пиксельный камуфляж «Фиолетовый»"
+	{
+		"index"		"818"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Жало смерти"
+	{
+		"index"		"1052"
+		"classes"	"weapon_ssg08;"
+	}
+	"Жертва"
+	{
+		"index"		"935"
+		"classes"	"weapon_mp7;weapon_ssg08;"
+	}
+	"Белизна"
+	{
+		"index"		"934"
+		"classes"	"weapon_sg556;"
+	}
+	"Полуночная пальма"
+	{
+		"index"		"933"
+		"classes"	"weapon_m249;weapon_cz75a;"
+	}
+	"Увядшая лоза"
+	{
+		"index"		"932"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Старые корни"
+	{
+		"index"		"931"
+		"classes"	"weapon_mp9;"
+	}
+	"Новые корни"
+	{
+		"index"		"930"
+		"classes"	"weapon_g3sg1;"
+	}
+	"Зыбучие пески"
+	{
+		"index"		"929"
+		"classes"	"weapon_nova;"
+	}
+	"Чёрно-коричневый"
+	{
+		"index"		"928"
+		"classes"	"weapon_p250;"
+	}
+	"Застарелое дерево"
+	{
+		"index"		"927"
+		"classes"	"weapon_aug;"
+	}
+	"Пиксельный камуфляж «Красный»"
+	{
+		"index"		"926"
+		"classes"	"weapon_m4a1;"
+	}
+	"Пиксельный камуфляж «Пустыня»"
+	{
+		"index"		"925"
+		"classes"	"weapon_p90;"
+	}
+	"Пустынный окрас"
+	{
+		"index"		"924"
+		"classes"	"weapon_revolver;"
+	}
+	"Оранжевый анолис"
+	{
+		"index"		"922"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Золотая арабеска"
+	{
+		"index"		"921"
+		"classes"	"weapon_ak47;"
+	}
+	"Сушь"
+	{
+		"index"		"880"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Градиент"
+	{
+		"index"		"879"
+		"classes"	"weapon_ump45;"
 	}
 	"Дань уважения"
 	{
@@ -1858,7 +2348,7 @@
 	"Ручная роспись"
 	{
 		"index"		"581"
-		"classes"	"weapon_knife_m9_bayonet;"
+		"classes"	"weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Ручная роспись"
 	{
@@ -1868,7 +2358,7 @@
 	"Чистая вода"
 	{
 		"index"		"579"
-		"classes"	"weapon_knife_m9_bayonet;"
+		"classes"	"weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Чистая вода"
 	{
@@ -1903,27 +2393,27 @@
 	"Гамма-волны (Phase 4)"
 	{
 		"index"		"572"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Гамма-волны (Phase 3)"
 	{
 		"index"		"571"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Гамма-волны (Phase 2)"
 	{
 		"index"		"570"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Гамма-волны (Phase 1)"
 	{
 		"index"		"569"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Гамма-волны (Emerald)"
 	{
 		"index"		"568"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
 	"Черный глянец"
 	{
@@ -2088,7 +2578,7 @@
 	"Защитная сетка"
 	{
 		"index"		"795"
-		"classes"	"weapon_ak47;"
+		"classes"	"weapon_ak47;weapon_tec9;"
 	}
 	"Дворник"
 	{
@@ -3673,7 +4163,7 @@
 	"Полная остановка"
 	{
 		"index"		"250"
-		"classes"	"weapon_sawedoff;weapon_mp7;"
+		"classes"	"weapon_ump45;weapon_sawedoff;weapon_mp7;"
 	}
 	"Синий кварц"
 	{
@@ -3683,7 +4173,7 @@
 	"Красный кварц"
 	{
 		"index"		"248"
-		"classes"	"weapon_tec9;"
+		"classes"	"weapon_tec9;weapon_nova;"
 	}
 	"Дамасская сталь"
 	{
@@ -3693,7 +4183,7 @@
 	"Янтарный градиент"
 	{
 		"index"		"246"
-		"classes"	"weapon_mac10;weapon_sawedoff;weapon_hkp2000;"
+		"classes"	"weapon_aug;weapon_galilar;weapon_mac10;weapon_sawedoff;weapon_hkp2000;"
 	}
 	"Армейский спецназ"
 	{
@@ -3723,7 +4213,7 @@
 	"Калифорнийский камуфляж"
 	{
 		"index"		"240"
-		"classes"	"weapon_xm1014;weapon_negev;"
+		"classes"	"weapon_famas;weapon_xm1014;weapon_negev;"
 	}
 	"Смешанный синий камуфляж"
 	{
@@ -4268,7 +4758,7 @@
 	"Пиксельный камуфляж «Розовый»"
 	{
 		"index"		"84"
-		"classes"	"weapon_awp;"
+		"classes"	"weapon_glock;weapon_awp;"
 	}
 	"Пиксельный камуфляж «Ржавчина»"
 	{
@@ -4318,7 +4808,7 @@
 	"Углепластик"
 	{
 		"index"		"70"
-		"classes"	"weapon_ump45;weapon_bizon;weapon_mag7;weapon_scar20;"
+		"classes"	"weapon_ump45;weapon_bizon;weapon_mag7;weapon_scar20;weapon_ssg08;"
 	}
 	"Хладнокровный"
 	{
@@ -4368,7 +4858,7 @@
 	"Поверхностная закалка"
 	{
 		"index"		"44"
-		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
+		"classes"	"weapon_fiveseven;weapon_ak47;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
 	"Патина"
 	{
@@ -4403,7 +4893,7 @@
 	"Пламя"
 	{
 		"index"		"37"
-		"classes"	"weapon_deagle;weapon_ump45;"
+		"classes"	"weapon_deagle;weapon_ump45;weapon_revolver;"
 	}
 	"Окостеневший"
 	{
@@ -4510,7 +5000,7 @@
 		"index"		"9"
 		"classes"	"weapon_aug;"
 	}
-	"Песчаная буря"
+	"Буря в пустыне"
 	{
 		"index"		"8"
 		"classes"	"weapon_g3sg1;weapon_m4a1;"
